--- Auto-Git Commit ---

--- a/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
+++ b/Linux/Learning/深入Linux内核架构/附录B 使用源代码/3. 用Kbuild编译内核.md
@@ -1,10 +1,18 @@
+
+
 在配置内核之后，就必须**编译源代码**，来生成**内核映像**和**模块二进制文件**。内核使用`GNU Make`来完成该工作。
 
-它采用了一个复杂的**Makefile系统**，来满足**联编内核**的特殊要求，联编普通应用程序通常没有这些需求。要完全理解该机制的工作原理，就需要对make技巧的深入理解，本附录不打算深入细节，只是从最终用户和内核程序员的角度(不是Kbuild开发者的角度)，来简单讲述一下联编系统的使用。`Documentation/kbuild/makefiles.txt`中包含了联编系统的详细文档，本节就是基于该文档。
+它采用了一个复杂的**Makefile系统**，来满足**联编内核**的特殊要求，联编普通应用程序通常没有这些需求。
 
-# 使用Kbuild系统
+要完全理解该机制的工作原理，就需要对make技巧的深入理解，本附录不打算深入细节，只是从最终用户和内核程序员的角度(**不是Kbuild开发者**的角度)，来简单讲述一下联编系统的使用。
 
-`联编目标help`在内核版本2.5开发期间被引入，用于向用户显示所有可用的make目标。它输出一个**目标列表**，会区分体系结构相关和无关的目标。
+`Documentation/kbuild/makefiles.txt`中包含了联编系统的详细文档，本节就是基于该文档。
+
+# 1. 使用Kbuild系统
+
+`联编目标help`在内核版本2.5开发期间被引入，用于向用户显示所有可用的make目标。
+
+它输出一个**目标列表**，会区分体系结构相关和无关的目标。
 
 例如，在UltraSparc系统上，会显示如下列表:
 
@@ -100,18 +108,21 @@ Architecture specific targets (x86):
   x86_64_defconfig      - Build for x86_64
 ```
 
-如帮助文本所解释的，如果调用make时没有参数，就将编译所有用\*标记的目标。
+如帮助文本所解释的，如果调用make时**没有参数**，就将编译所有用`*`标记的目标。
 
-# Makefile的结构
+# 2. Makefile的结构
 
 除了`.config`文件，**Kbuild机制**还使用了下列组件。
 
 - **主Makefile**(`/path/to/src/Makefile`)，通过根据配置**递归地编译子目录**，并将编译结果合并到最终产品中，来生成**内核本身**和**模块**。
+
 - **体系结构相关的Makefile**，在`arch/arch/Makefile`中，负责在编译期间必须遵守的**与处理器相关**的微妙之处，如特别的编译优化选项。该文件还实现了所有**体系结构相关的make目标**，此前在讨论help时提到过这些目标。
+
 - `scripts/Makefile.*`包含了与**一般编译、模块生成、各种实用程序的编译、从内核树删除目标文件和临时文件等任务相关的make规则**。
+
 - 内核源代码的**各个子目录**都包含了与特定驱动程序或子系统相关的**Makefile**(也采用了标准的语法)。
 
-## 主Makefile
+## 2.1. 主Makefile
 
 主Makefile是**内核编译的关键**。它定义了**C编译器**、**链接器**的**调用路径**等信息。
 
@@ -184,7 +195,7 @@ make ARCH=arm CROSS_COMPILE=arm-linux-
 
 除了这些定义之外，Makefile还包括了**其他一些语句**，用于**递归下降到各个子目录**，并借助子目录局部的Makefile来编译其中包含的文件。本附录不会详细讨论该机制，因为它涉及make机制的很多微妙之处。
 
-# 驱动程序和子系统Makefile
+# 3. 驱动程序和子系统Makefile
 
 驱动程序和子系统目录中的Makefile用于根据`.config`中的**配置**来**编译正确的文件**，并将**编译的流程导向到所要求的子目录**中。
 
