--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/3. 地址空间.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/3. 地址空间.md
@@ -3,3 +3,9 @@
 
 # 物理地址空间
 
+我们划分的物理地址空间如表1-4所示.
+
+![2020-02-11-14-33-45.png](./images/2020-02-11-14-33-45.png)
+
+PCB pool基址在物理地址`100000h`上共有128KB, 支持16个逻辑处理器. 每个逻辑处理器拥有自己的PCB区域, 每个PCB大小为8KB. 因此, CPU0的PCB位于`100000h`上, 而CPU1的PCB位于`102000h`上, 依此类推.
+
