--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/3. 地址空间.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/3. 地址空间.md
@@ -9,3 +9,5 @@
 
 PCB pool基址在物理地址`100000h`上共有128KB, 支持16个逻辑处理器. 每个逻辑处理器拥有自己的PCB区域, 每个PCB大小为8KB. 因此, CPU0的PCB位于`100000h`上, 而CPU1的PCB位于`102000h`上, 依此类推.
 
+VM domain pool用于分配逻辑处理器的VM domain, 共128MB. 每个逻辑处理器对应一个VM domain, 大小为8MB, 因此共支持16个逻辑处理器.
+
