--- Auto-Git Commit ---

--- a/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
@@ -579,7 +579,7 @@ type_init(kvm_type_init);
 static int kvm_init(MachineState *ms)
 ```
 
-从上面的映射关系中可以看到，我们当前的配置下使用kvm_\init作为初始化入口。
+从上面的映射关系中可以看到，我们当前的配置下使用kvm\_init作为初始化入口。
 
 #### 3.20.1.1. 初始化KVMState
 
