--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -1,2 +1,32 @@
 
-在系统平台上两个最重要的数据结构是: PCB(Processor Control Block, 处理器控制块)以及SDA(System Data Area, 系统数据区域).
+在系统平台上两个最重要的数据结构是: **PCB**(`Processor Control Block`, **处理器控制块**)以及**SDA**(`System Data Area`, **系统数据区域**).
+
+它们定义在 `inc/system_manage_region.inc` 文件中.
+
+注: PCB与SDA结构内所有的地址值都是64位宽. 这样的设计使得结构很容易适应于32位与64位环境.
+
+# PCB结构
+
+每个逻辑处理器对应一个PCB结构, 也就是每个逻辑处理器有独立的PCB结构. 用来维护管理与处理器相关的信息.
+
+下面将介绍PCB结构内主要的数据.
+
+## 访问GS段
+
+我们使用**PCB结构基址**作为**GS段的基址**. 因此, **代码**总是使用**GS段**来访问**PCB结构内的数据**. 
+
+在`common/protected.asm`模块里将32位的`PCB.Base`值写入`GS.base`. 代码如下.
+
+```
+
+```
+
+在`common/long.asm`模块里将64位的`PCB.base`值写入`GS.base`, 如下代码.
+
+```
+
+```
+
+`PCB.base`存放64位的PCB基址, 只能通过`WRMSR`指令写`IA32_GS_BASE`寄存器来达到写入64位`GS.base`值.
+
+在`stage1`阶段下(未分页保护模式), `GS.base`存放PCB的
