--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -29,4 +29,8 @@
 
 `PCB.base`存放64位的PCB基址, 只能通过`WRMSR`指令写`IA32_GS_BASE`寄存器来达到写入64位`GS.base`值.
 
-在`stage1`阶段下(未分页保护模式), `GS.base`存放PCB的物理基址. 在进入stage2(分页的保护模式)或stage3阶段(64-bit模式)前, GS.base将写入线性地址.
+在`stage1`阶段下(未分页保护模式), `GS.base`存放PCB的物理基址. 在进入`stage2`(**分页的保护模式**)或`stage3`阶段(`64-bit`模式)前, `GS.base`将写入**线性地址**.
+
+## 引用的其他区域基址
+
+在PCB结构内定义了若干个64位宽的地址值, 用来保存所引用的其他区域基址.
