--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -57,6 +57,13 @@ mov edi, [gs: PCB.Base + 4]
 %endif
 ```
 
+`PCB.SdaBase`指向全局的SDA(System Data Area)区域, 在源码里, 通常像下面指令示例一样读取SDA基址.
 
-
-
+```asm
+%ifdef __X64
+    LoadGsBaseToRbp
+%else
+    mov ebp, [gs:PCB.base]
+%endif
+    REX.Wrxb
+```
