--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -65,5 +65,10 @@ mov edi, [gs: PCB.Base + 4]
 %else
     mov ebp, [gs:PCB.base]
 %endif
-    REX.Wrxb
+    REX.Wrxb                        ; 用于x64
+    Mov ebx, [ebp + PCB.SdaBase]    ; 读取SDA基址
 ```
+
+## 描述符标管理记录
+
+PCB结构内部分管li
