--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -81,3 +81,20 @@ PCB结构内部分管理记录与描述符表相关.
 
 PCB结构有很大一部分值用来维护和记录与处理器相关的信息. 代码如下.
 
+## 处理器的context信息
+
+这部分包含了通用寄存器context信息, 以及x87 FPU与XMM单元的image信息. 在本书代码中, 这部分信息并没有实际派上用处.
+
+## VMX相关的管理记录
+
+PCB结构内包含了与VMX相关的管理记录信息, 他们会经常使用.
+
+代码如下
+
+```
+struct PCB
+{
+    ... ...
+
+    ;;
+}
