--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -97,4 +97,22 @@ struct PCB
     ... ...
 
     ;;
+    ;; 处理器内存domain范围
+    ;;
+    .Domain                 RESQ                1               ; 内存domain
+    .DomainTop              RESQ                1               ; domain顶部
+
+    ... ...
+
+    ;;
+    ;; 记录VMX的VMXON pointer
+    ;;
+    .VmxonPointer           RESQ                1
+    .VmxonPhysicalPointer   RESQ                1
+
+    ;;
+    ;; 记录当前VMCS region pointer
+    ;;
+    .VmcsPointer            RESQ                1
+    .Vmcs
 }
