--- a/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第1章 系统平台/4. 数据结构.md
@@ -114,5 +114,10 @@ struct PCB
     ;; 记录当前VMCS region pointer
     ;;
     .VmcsPointer            RESQ                1
-    .Vmcs
+    .VmcsPhysicalPointer    RESQ                1
+
+    ;;
+    ;; 记录 4 个VMCS管理指针, 指向 VMXS_MANAGE_BLOCK
+    ;;
+    .VmcsA
 }
