--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
@@ -1,18 +1,30 @@
-一般源代码提供的程序安装需要通过配置、编译、安装三个步骤；
 
-配置做的工作主要是检查当前环境是否满足要安装软件的依赖关系，以及设置程序安装所需要的初始化信息，比如安装路径，需要安装哪些组件；配置完成，会生成makefile文件供第二步make使用；
-编译是对源文件进行编译链接生成可执行程序；
-安装做的工作就简单多了，就是将生成的可执行文件拷贝到配置时设置的初始路径下；
-1.1. 配置
+# 程序安装过程
+
+一般源代码提供的**程序安装**需要通过**配置**、**编译**、**安装**三个步骤；
+
+1. 配置做的工作主要是检查**当前环境**是否满足要安装软件的**依赖关系**，以及设置程序**安装所需**要的**初始化信息**，比如**安装路径**，需要安装**哪些组件**；配置完成，会**生成makefile文件**供第二步make使用；
+2. 编译是对源文件进行**编译链接**生成**可执行程序**；
+3. 安装做的工作就简单多了，就是将生成的**可执行文件拷贝**到配置时设置的初始路径下；
+
+# 配置
+
 查询可用的配置选项:
 
+```
 ./configure --help
+```
+
 配置路径:
 
+```
 ./configure --prefix=/usr/local/snmp
-–prefix是配置使用的最常用选项，设置程序安装的路径；
+```
 
-1.2. 编译
+`–prefix`是配置使用的最常用选项，设置**程序安装的路径**；
+
+# 编译
+
 编译使用make编译:
 
 make -f myMakefile
