--- Auto-Git Commit ---

--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
@@ -27,12 +27,17 @@
 
 编译使用make编译:
 
+```
 make -f myMakefile
-通过-f选项显示指定需要编译的makefile；如果待使用makefile文件在当前路径，且文件名为以下几个，则不用显示指定：
+```
 
-makefile Makefile
+通过`-f`选项显示**指定**需要编译的**makefile**；如果待使用makefile文件在**当前路径**，且文件名为以下几个，则不用显示指定：
 
-makefile编写的要点
+- makefile
+- Makefile
+
+## makefile编写的要点
+
 必须满足第一条规则，满足后停止
 除第一条规则，其他无顺序
 makefile中的全局自变量
