--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
@@ -38,20 +38,22 @@ make -f myMakefile
 
 ## makefile编写的要点
 
-必须满足第一条规则，满足后停止
-除第一条规则，其他无顺序
-makefile中的全局自变量
-$@目标文件名
-@^所有前提名，除副本
-@＋所有前提名，含副本
-@＜一个前提名
-@？所有新于目标文件的前提名
-@*目标文件的基名称
-注解
+- 必须满足第一条规则，满足后停止
+- 除第一条规则，其他无顺序
 
-系统学习makefile的书写规则，请参考 跟我一起学makefile [1]
+## makefile中的全局自变量
 
-更多选择 CMake
+- `$@`目标文件名
+- `@^`所有前提名，除副本
+- `@＋`所有前提名，含副本
+- `@＜`一个前提名
+- `@？`所有新于目标文件的前提名
+- `@*`目标文件的基名称
+
+注: 系统学习makefile的书写规则，请参考 跟我一起学makefile [1]
+
+## 更多选择 CMake
+
 CMake是一个跨平台的安装（编译）工具，可以用简单的语句来描述所有平台的安装(编译过程)。他能够输出各种各样的makefile或者project文件。使用CMake，能够使程序员从复杂的编译连接过程中解脱出来。它使用一个名为 CMakeLists.txt 的文件来描述构建过程,可以生成标准的构建文件,如 Unix/Linux 的 Makefile 或Windows Visual C++ 的 projects/workspaces 。
 
 编译依赖的库
