--- Auto-Git Commit ---

--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
@@ -54,13 +54,16 @@ make -f myMakefile
 
 ## 更多选择 CMake
 
-CMake是一个跨平台的安装（编译）工具，可以用简单的语句来描述所有平台的安装(编译过程)。他能够输出各种各样的makefile或者project文件。使用CMake，能够使程序员从复杂的编译连接过程中解脱出来。它使用一个名为 CMakeLists.txt 的文件来描述构建过程,可以生成标准的构建文件,如 Unix/Linux 的 Makefile 或Windows Visual C++ 的 projects/workspaces 。
+CMake是一个**跨平台**的**安装（编译）工具**，可以用简单的语句来描述所有平台的安装(编译过程)。他能够输出各种各样的**makefile**或者**project文件**。
 
-编译依赖的库
-makefile编译过程中所依赖的非标准库和头文件路径需要显示指明:
+使用CMake，能够使程序员从复杂的编译连接过程中解脱出来。它使用一个名为 `CMakeLists.txt` 的文件来描述**构建过程**, 可以**生成标准的构建文件**,如 Unix/Linux 的 `Makefile` 或Windows Visual C++ 的 `projects/workspaces` 。
 
-CPPFLAGS -I标记非标准头文件存放路径
-LDFLAGS  -L标记非标准库存放路径
+## 编译依赖的库
+
+makefile编译过程中所依赖的**非标准库**和**头文件路径**需要显示指明:
+
+- `CPPFLAGS`: `-I`标记**非标准头文件**存放路径
+- `LDFLAGS`: `-L`标记**非标准库**存放路径
 如果CPPFLAGS和LDFLAGS已在用户环境变量中设置并且导出（使用export关键字），就不用再显示指定；
 
 make -f myMakefile LDFLAGS='-L/var/xxx/lib -L/opt/mysql/lib'
