--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
@@ -84,9 +84,10 @@ g++ -o unixApp unixApp.o a.o b.o
 
 选项说明：
 
--o:指明生成的目标文件
--g：添加调试信息
--E: 查看中间文件
+* `-o`:指明生成的目标文件
+* `-g`：添加调试信息
+* `-E`: 查看中间文件
+
 应用：查询宏展开的中间文件：
 
 在g++的编译选项中，添加 -E选项，然后去掉-o选项 ，重定向到一个文件中即可:
