--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/1. 程序构建.md
@@ -1,5 +1,23 @@
 
-# 程序安装过程
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 程序安装过程](#1-程序安装过程)
+- [2. 配置](#2-配置)
+- [3. 编译](#3-编译)
+  - [3.1. makefile编写的要点](#31-makefile编写的要点)
+  - [3.2. makefile中的全局自变量](#32-makefile中的全局自变量)
+  - [3.3. 更多选择 CMake](#33-更多选择-cmake)
+  - [3.4. 编译依赖的库](#34-编译依赖的库)
+  - [3.5. g++编译](#35-g编译)
+  - [3.6. 查询宏展开的中间文件](#36-查询宏展开的中间文件)
+- [4. 安装](#4-安装)
+- [5. 总结](#5-总结)
+
+<!-- /code_chunk_output -->
+
+# 1. 程序安装过程
 
 一般源代码提供的**程序安装**需要通过**配置**、**编译**、**安装**三个步骤；
 
@@ -7,7 +25,7 @@
 2. 编译是对源文件进行**编译链接**生成**可执行程序**；
 3. 安装做的工作就简单多了，就是将生成的**可执行文件拷贝**到配置时设置的初始路径下；
 
-# 配置
+# 2. 配置
 
 查询可用的配置选项:
 
@@ -23,7 +41,7 @@
 
 `–prefix`是配置使用的最常用选项，设置**程序安装的路径**；
 
-# 编译
+# 3. 编译
 
 编译使用make编译:
 
@@ -36,12 +54,12 @@ make -f myMakefile
 - makefile
 - Makefile
 
-## makefile编写的要点
+## 3.1. makefile编写的要点
 
 - 必须满足第一条规则，满足后停止
 - 除第一条规则，其他无顺序
 
-## makefile中的全局自变量
+## 3.2. makefile中的全局自变量
 
 - `$@`目标文件名
 - `@^`所有前提名，除副本
@@ -52,13 +70,13 @@ make -f myMakefile
 
 注: 系统学习makefile的书写规则，请参考 跟我一起学makefile [1]
 
-## 更多选择 CMake
+## 3.3. 更多选择 CMake
 
 CMake是一个**跨平台**的**安装（编译）工具**，可以用简单的语句来描述所有平台的安装(编译过程)。他能够输出各种各样的**makefile**或者**project文件**。
 
 使用CMake，能够使程序员从复杂的编译连接过程中解脱出来。它使用一个名为 `CMakeLists.txt` 的文件来描述**构建过程**, 可以**生成标准的构建文件**,如 Unix/Linux 的 `Makefile` 或Windows Visual C++ 的 `projects/workspaces` 。
 
-## 编译依赖的库
+## 3.4. 编译依赖的库
 
 makefile编译过程中所依赖的**非标准库**和**头文件路径**需要显示指明:
 
@@ -76,7 +94,7 @@ make -f myMakefile LDFLAGS='-L/var/xxx/lib -L/opt/mysql/lib'
 
 链接多库时，**多个库之间**如果有**依赖**，需要注意书写的顺序，**右边**是**左边**的**前提**；
 
-## g++编译
+## 3.5. g++编译
 
 ```
 g++ -o unixApp unixApp.o a.o b.o
@@ -88,7 +106,7 @@ g++ -o unixApp unixApp.o a.o b.o
 * `-g`: 添加**调试信息**
 * `-E`: 查看中间文件
 
-## 查询宏展开的中间文件
+## 3.6. 查询宏展开的中间文件
 
 在`g++`的编译选项中，添加 `-E`选项，然后去掉`-o`选项 ，重定向到一个文件中即可:
 
@@ -98,21 +116,27 @@ g++ -g -E unixApp.cpp  -I/opt/app/source > midfile
 
 查询应用程序需要链接的库:
 
-$ldd myprogrammer
+```
+$ ldd myprogrammer
     libstdc++.so.6 => /usr/lib64/libstdc++.so.6 (0x00000039a7e00000)
     libm.so.6 => /lib64/libm.so.6 (0x0000003996400000)
     libgcc_s.so.1 => /lib64/libgcc_s.so.1 (0x00000039a5600000)
     libc.so.6 => /lib64/libc.so.6 (0x0000003995800000)
     /lib64/ld-linux-x86-64.so.2 (0x0000003995400000)
-注解
+```
 
-关于ldd的使用细节，参见 ldd 查看程序依赖库
+注: 关于ldd的使用细节，参见 `ldd 查看程序依赖库`
 
-1.3. 安装
-安装做的工作就简单多了，就是将生成的可执行文件拷贝到配置时设置的初始路径下:
+# 4. 安装
 
-$make install
-其实 install 就是makefile中的一个规则，打开makefile文件后可以查看程序安装的所做的工作；
+安装做的工作就简单多了，就是将生成的**可执行文件拷贝**到配置时设置的初始路径下:
 
-1.4. 总结
+```
+$ make install
+```
+
+其实 `install` 就是makefile中的一个规则，打开makefile文件后可以查看程序安装的所做的工作；
+
+# 5. 总结
+
 configure make install g++
