--- Auto-Git Commit ---

--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
@@ -27,6 +27,40 @@ $gdb programmer     # 启动gdb
 
 ## pstack 跟踪栈空间
 
-pstack是一个脚本工具，可显示**每个进程的栈跟踪**。pstack 命令必须由相应进程的属主或 root 运行。其核心实现就是使用了gdb以及thread apply all bt命令;
+pstack是一个脚本工具，可显示**每个进程的栈跟踪**。
+
+pstack 命令必须由相应进程的属主或 root 运行。其**核心实现**就是使用了**gdb**以及`thread apply all bt`命令;
 
 语法:
+
+```
+pstrack <program-pid>
+```
+
+示例:
+
+```
+$ pstack 4551
+Thread 7 (Thread 1084229984 (LWP 4552)):
+#0  0x000000302afc63dc in epoll_wait () from /lib64/tls/libc.so.6
+#1  0x00000000006f0730 in ub::EPollEx::poll ()
+#2  0x00000000006f172a in ub::NetReactor::callback ()
+#3  0x00000000006fbbbb in ub::UBTask::CALLBACK ()
+#4  0x000000302b80610a in start_thread () from /lib64/tls/libpthread.so.0
+#5  0x000000302afc6003 in clone () from /lib64/tls/libc.so.6
+#6  0x0000000000000000 in ?? ()
+```
+
+## strace分析系统调用
+
+strace常用来跟踪**进程执行时**的**系统调用**和**所接收的信号**。
+
+在Linux世界，进程**不能直接访问硬件设备**，当进程需要**访问硬件设备**(比如读取磁盘文件，接收网络数据等等)时，必须由**用户态模式**切换至**内核态模式**，通过系统调用访问硬件设备。
+
+strace可以跟踪到一个进程**产生的系统调用**,包括**参数**，**返回值**，**执行消耗的时间**。
+
+完整程序:
+
+```
+strace -o output.txt -T -tt -e trace=all -p 28979
+```
