--- Auto-Git Commit ---

--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
@@ -64,3 +64,72 @@ strace可以跟踪到一个进程**产生的系统调用**,包括**参数**，**
 ```
 strace -o output.txt -T -tt -e trace=all -p 28979
 ```
+
+跟踪28979进程的所有系统调用（`-e trace=all`），并统计**系统调用**的**花费时间**，以及**开始时间**（以可视化的时分秒格式显示），最后将记录结果存在`output.txt`文件里面。
+
+查看进程正在做什么(实时输出进程执行系统调用的情况):
+
+```
+strace -p <process-pid>
+```
+
+关于strace的详细介绍，详见 `strace 跟踪进程中的系统调用` ;
+
+# 目标文件分析
+
+## nm列出符号清单
+
+nm用来列出目标文件的符号清单。
+
+```
+$nm myProgrammer
+08049f28 d _DYNAMIC
+08049ff4 d _GLOBAL_OFFSET_TABLE_
+080484dc R _IO_stdin_used
+         w _Jv_RegisterClasses
+08049f18 d __CTOR_END__
+08049f14 d __CTOR_LIST__
+08049f20 D __DTOR_END__
+08049f1c d __DTOR_LIST__
+080485e0 r __FRAME_END__
+08049f24 d __JCR_END__
+08049f24 d __JCR_LIST__
+0804a014 A __bss_start
+0804a00c D __data_start
+08048490 t __do_global_ctors_aux
+08048360 t __do_global_dtors_aux
+0804a010 D __dso_handle
+         w __gmon_start__
+08048482 T __i686.get_pc_thunk.bx
+08049f14 d __init_array_end
+08049f14 d __init_array_start
+08048480 T __libc_csu_fini
+08048410 T __libc_csu_init
+         U __libc_start_main@@GLIBC_2.0
+0804a014 A _edata
+0804a01c A _end
+080484bc T _fini
+080484d8 R _fp_hw
+080482b4 T _init
+08048330 T _start
+0804a014 b completed.6086
+0804a00c W data_start
+0804a018 b dtor_idx.6088
+080483c0 t frame_dummy
+080483e4 T main
+         U printf@@GLIBC_2.0
+```
+
+这些包含**可执行代码的段**称为**正文段**。
+
+同样地，**数据段**包含了**不可执行的信息或数据**。
+
+另一种类型的段，称为 **BSS 段**，它包含以**符号数据开头的块**。
+
+对于 nm 命令列出的**每个符号**，它们的值使用**十六进制**来表示（缺省行为），并且在该符号前面加上了一个表示**符号类型**的**编码字符**。
+
+常见的各种编码包括：
+
+A 表示绝对 (absolute)，这意味着不能将该值更改为其他的连接；
+B 表示 BSS 段中的符号；
+C 表示引用未初始化的数据的一般符号。
