--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
@@ -130,6 +130,47 @@ $nm myProgrammer
 
 常见的各种编码包括：
 
-A 表示绝对 (absolute)，这意味着不能将该值更改为其他的连接；
-B 表示 BSS 段中的符号；
-C 表示引用未初始化的数据的一般符号。
+* A 表示绝对 (absolute)，这意味着不能将该值更改为其他的连接；
+* B 表示 BSS 段中的符号；
+* C 表示引用未初始化的数据的一般符号。
+
+可以将**目标文件**中所包含的**不同的部分**划分为**段**。段可以包含**可执行代码**、**符号名称**、**初始数据值**和许多其他类型的数据。有关**这些类型的数据的详细信息**，可以阅读 UNIX 中 nm 的 man 页面，其中按照该命令输出中的字符编码分别对每种类型进行了描述。
+
+在目标文件阶段，即使是一个简单的 Hello World 程序，其中也包含了大量的细节信息。nm 程序可用于**列举符号**及**其类型和值**，但是，要更**仔细地研究**目标文件中这些**命名段的内容**，需要使用功能更强大的工具。
+
+其中两种功能强大的工具是 objdump 和 readelf 程序。
+
+## objdump显示二进制文件信息
+
+ogjdump工具用来显示二进制文件的信息，就是以一种可阅读的格式让你更多地了解二进制文件可能带有的附加信息。
+
+```
+$objdump -d myprogrammer
+a.out:     file format elf32-i386
+
+
+Disassembly of section .init:
+
+080482b4 <_init>:
+ 80482b4:   53                      push   %ebx
+ 80482b5:   83 ec 08                sub    $0x8,%esp
+ 80482b8:   e8 00 00 00 00          call   80482bd <_init+0x9>
+ 80482bd:   5b                      pop    %ebx
+ 80482be:   81 c3 37 1d 00 00       add    $0x1d37,%ebx
+ 80482c4:   8b 83 fc ff ff ff       mov    -0x4(%ebx),%eax
+ 80482ca:   85 c0                   test   %eax,%eax
+ 80482cc:   74 05                   je     80482d3 <_init+0x1f>
+ 80482ce:   e8 3d 00 00 00          call   8048310 <__gmon_start__@plt>
+ 80482d3:   e8 e8 00 00 00          call   80483c0 <frame_dummy>
+ 80482d8:   e8 b3 01 00 00          call   8048490 <__do_global_ctors_aux>
+ 80482dd:   83 c4 08                add    $0x8,%esp
+ 80482e0:   5b                      pop    %ebx
+ 80482e1:   c3                      ret
+
+Disassembly of section .plt:
+...
+```
+
+每个可执行代码段将在需要特定的事件时执行，这些事件包括**库的初始化**和该**程序本身主入口点**。
+
+对于那些着迷于底层编程细节的程序员来说，这是一个功能非常强大的工具，可用于研究编译器和汇编器的输出。细节信息，比如这段代码中所显示的这些信息，可以揭示有关本地处理器本身运行方式的很多内容。对该处理器制造商提供的技术文档进行深入的研究，您可以收集关于一些有价值的信息，通过这些信息可以深入地了解内部的运行机制，因为功能程序提供了清晰的输出。
