--- Auto-Git Commit ---

--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
@@ -173,4 +173,76 @@ Disassembly of section .plt:
 
 每个可执行代码段将在需要特定的事件时执行，这些事件包括**库的初始化**和该**程序本身主入口点**。
 
-对于那些着迷于底层编程细节的程序员来说，这是一个功能非常强大的工具，可用于研究编译器和汇编器的输出。细节信息，比如这段代码中所显示的这些信息，可以揭示有关本地处理器本身运行方式的很多内容。对该处理器制造商提供的技术文档进行深入的研究，您可以收集关于一些有价值的信息，通过这些信息可以深入地了解内部的运行机制，因为功能程序提供了清晰的输出。
+对于那些着迷于底层编程细节的程序员来说，这是一个功能非常强大的工具，可用于研究**编译器**和**汇编器**的**输出**。细节信息，比如这段代码中所显示的这些信息，可以揭示有关本地处理器本身运行方式的很多内容。对该处理器制造商提供的技术文档进行深入的研究，您可以收集关于一些有价值的信息，通过这些信息可以深入地了解内部的运行机制，因为功能程序提供了清晰的输出。
+
+## readelf更详细显示二进制文件信息
+
+这个工具和objdump命令提供的功能类似，但是它显示的信息更为具体，并且它**不依赖BFD库**(BFD库是一个GNU项目，它的目标就是希望通过一种统一的接口来处理不同的目标文件）；
+
+```
+$readelf -all a.out
+ELF Header:
+  Magic:   7f 45 4c 46 01 01 01 00 00 00 00 00 00 00 00 00
+  Class:                             ELF32
+  Data:                              2's complement, little endian
+  Version:                           1 (current)
+  OS/ABI:                            UNIX - System V
+  ABI Version:                       0
+  Type:                              EXEC (Executable file)
+  Machine:                           Intel 80386
+  Version:                           0x1
+  Entry point address:               0x8048330
+  Start of program headers:          52 (bytes into file)
+  Start of section headers:          4412 (bytes into file)
+  Flags:                             0x0
+  Size of this header:               52 (bytes)
+  Size of program headers:           32 (bytes)
+  Number of program headers:         9
+  Size of section headers:           40 (bytes)
+  Number of section headers:         30
+  Section header string table index: 27
+
+Section Headers:
+  [Nr] Name              Type            Addr     Off    Size   ES Flg Lk Inf Al
+  [ 0]                   NULL            00000000 000000 000000 00      0   0  0
+  [ 1] .interp           PROGBITS        08048154 000154 000013 00   A  0   0  1
+  [ 2] .note.ABI-tag     NOTE            08048168 000168 000020 00   A  0   0  4
+  [ 3] .note.gnu.build-i NOTE            08048188 000188 000024 00   A  0   0  4
+  [ 4] .gnu.hash         GNU_HASH        080481ac 0001ac 000020 04   A  5   0  4
+  [ 5] .dynsym           DYNSYM          080481cc 0001cc 000050 10   A  6   1  4
+  [ 6] .dynstr           STRTAB          0804821c 00021c 00004c 00   A  0   0  1
+  [ 7] .gnu.version      VERSYM          08048268 000268 00000a 02   A  5   0  2
+  [ 8] .gnu.version_r    VERNEED         08048274 000274 000020 00   A  6   1  4
+  [ 9] .rel.dyn          REL             08048294 000294 000008 08   A  5   0  4
+  [10] .rel.plt          REL             0804829c 00029c 000018 08   A  5  12  4
+  [11] .init             PROGBITS        080482b4 0002b4 00002e 00  AX  0   0  4
+  [12] .plt              PROGBITS        080482f0 0002f0 000040 04  AX  0   0 16
+  [13] .text             PROGBITS        08048330 000330 00018c 00  AX  0   0 16
+  [14] .fini             PROGBITS        080484bc 0004bc 00001a 00  AX  0   0  4
+  [15] .rodata           PROGBITS        080484d8 0004d8 000011 00   A  0   0  4
+  [16] .eh_frame_hdr     PROGBITS        080484ec 0004ec 000034 00   A  0   0  4
+  [17] .eh_frame         PROGBITS        08048520 000520 0000c4 00   A  0   0  4
+  [18] .ctors            PROGBITS        08049f14 000f14 000008 00  WA  0   0  4
+  [19] .dtors            PROGBITS        08049f1c 000f1c 000008 00  WA  0   0  4
+  [20] .jcr              PROGBITS        08049f24 000f24 000004 00  WA  0   0  4
+  [21] .dynamic          DYNAMIC         08049f28 000f28 0000c8 08  WA  6   0  4
+  [22] .got              PROGBITS        08049ff0 000ff0 000004 04  WA  0   0  4
+  [23] .got.plt          PROGBITS        08049ff4 000ff4 000018 04  WA  0   0  4
+  [24] .data             PROGBITS        0804a00c 00100c 000008 00  WA  0   0  4
+  [25] .bss              NOBITS          0804a014 001014 000008 00  WA  0   0  4
+  [26] .comment          PROGBITS        00000000 001014 00002a 01  MS  0   0  1
+  [27] .shstrtab         STRTAB          00000000 00103e 0000fc 00      0   0  1
+  [28] .symtab           SYMTAB          00000000 0015ec 000410 10     29  45  4
+  [29] .strtab           STRTAB          00000000 0019fc 0001f9 00      0   0  1
+  ...
+```
+
+`ELF Header` 为该文件中**所有段入口**显示了**详细的摘要**。在列举出这些 Header 中的内容之前，您可以看到 Header 的具体数目。在研究一个较大的目标文件时，该信息可能非常有用。
+
+除了所有这些段之外，编译器可以将调试信息放入到目标文件中，并且还可以显示这些信息。输入下面的命令，仔细分析编译器的输出（假设您扮演了调试程序的角色）:
+
+```
+readelf --debug-dump a.out | more
+```
+
+调试工具，如 GDB，可以读取这些调试信息，并且当程序在调试器中运行的同时，您可以使用该工具显示更具描述性的标记，而不是对代码进行反汇编时的原始地址值。
