--- Auto-Git Commit ---

--- a/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
+++ b/Linux/Tools/Linux工具快速教程/2. Linux工具进阶/2. 程序调试.md
@@ -140,7 +140,7 @@ $nm myProgrammer
 
 其中两种功能强大的工具是 objdump 和 readelf 程序。
 
-## objdump显示二进制文件信息
+## objdump 显示二进制文件信息
 
 ogjdump工具用来显示二进制文件的信息，就是以一种可阅读的格式让你更多地了解二进制文件可能带有的附加信息。
 
@@ -175,7 +175,7 @@ Disassembly of section .plt:
 
 对于那些着迷于底层编程细节的程序员来说，这是一个功能非常强大的工具，可用于研究**编译器**和**汇编器**的**输出**。细节信息，比如这段代码中所显示的这些信息，可以揭示有关本地处理器本身运行方式的很多内容。对该处理器制造商提供的技术文档进行深入的研究，您可以收集关于一些有价值的信息，通过这些信息可以深入地了解内部的运行机制，因为功能程序提供了清晰的输出。
 
-## readelf更详细显示二进制文件信息
+## readelf 更详细显示二进制文件信息
 
 这个工具和objdump命令提供的功能类似，但是它显示的信息更为具体，并且它**不依赖BFD库**(BFD库是一个GNU项目，它的目标就是希望通过一种统一的接口来处理不同的目标文件）；
 
@@ -237,12 +237,136 @@ Section Headers:
   ...
 ```
 
-`ELF Header` 为该文件中**所有段入口**显示了**详细的摘要**。在列举出这些 Header 中的内容之前，您可以看到 Header 的具体数目。在研究一个较大的目标文件时，该信息可能非常有用。
+`ELF Header` 为该文件中**所有段入口**显示了**详细的摘要**。在列举出这些 Header 中的内容之前，您可以看到 **Header 的具体数目**。在研究一个较大的目标文件时，该信息可能非常有用。
 
-除了所有这些段之外，编译器可以将调试信息放入到目标文件中，并且还可以显示这些信息。输入下面的命令，仔细分析编译器的输出（假设您扮演了调试程序的角色）:
+除了所有这些段之外，编译器可以将**调试信息**放入到**目标文件**中，并且还可以显示这些信息。输入下面的命令，仔细分析**编译器的输出**（假设您扮演了调试程序的角色）:
 
 ```
 readelf --debug-dump a.out | more
 ```
 
 调试工具，如 GDB，可以读取这些调试信息，并且当程序在调试器中运行的同时，您可以使用该工具显示更具描述性的标记，而不是对代码进行反汇编时的原始地址值。
+
+## size 查看程序内存占用
+
+size这个工具用来查看程序运行时各个段的实际内存占用:
+
+```
+$size a.out
+text           data     bss     dec     hex filename
+1146            256       8    1410     582 a.out
+```
+
+## file 文件类型查询
+
+这个工具用于查看文件的类型；
+
+比如我们在**64位机器**上发现了一个**32位的库**，**链接不上**，这就有问题了：
+
+```
+$file a.out
+a.out: ELF 64-bit LSB executable, AMD x86-64, version 1 (SYSV), for GNU/Linux 2.6.9, dynamically linked (uses shared libs), for GNU/Linux 2.6.9, not stripped
+```
+
+也可以查看**Core文件是由哪个程序**生成:
+
+```
+$file core.22355
+```
+
+## strings 查询数据中的文本信息
+
+一个文件中包含**二进制数据**和**文本数据**，如果**只**需要查看**其文本信息**，使用这个命令就很方便；过滤掉非字符数据，将文本信息输出:
+
+```
+$strings <objfile>
+```
+
+## fuser 显示文件使用者
+
+显示所有正在使用着指定的file, file system 或者 sockets的进程信息;
+
+```
+$fuser -m -u redis-server
+redis-server: 11552rce(weber) 22912rce(weber) 25501rce(weber)
+```
+
+使用了`-m`和`-u`选项，用来查找所有正在使用`redis-server`的**所有进程**的**PID**以及**该进程的OWNER**；
+
+fuser通常被用在**诊断系统**的”`resource busy`”问题。如果你希望**kill**所有正在使用某一指定的file, file system or sockets的进程的时候，你可以使用`-k`选项:
+
+```
+$fuser –k /path/to/your/filename
+```
+
+## xxd 十六进制显示数据
+
+以十六进制方式显示文件，只显示文本信息:
+
+```
+$xxd a.out
+0000000: 7f45 4c46 0101 0100 0000 0000 0000 0000  .ELF............
+0000010: 0200 0300 0100 0000 3083 0408 3400 0000  ........0...4...
+0000020: 3c11 0000 0000 0000 3400 2000 0900 2800  <.......4. ...(.
+0000030: 1e00 1b00 0600 0000 3400 0000 3480 0408  ........4...4...
+0000040: 3480 0408 2001 0000 2001 0000 0500 0000  4... ... .......
+0000050: 0400 0000 0300 0000 5401 0000 5481 0408  ........T...T...
+...
+```
+
+## od 特定进制显示文件
+
+通常使用od命令查看特殊格式的文件内容。通过指定该命令的不同选项可以以十进制、八进制、十六进制和ASCII码来显示文件。
+
+参数说明：
+
+`-A` 指定**地址基数**，包括：
+
+* d 十进制
+* o 八进制（系统默认值）
+* x 十六进制
+* n 不打印位移值
+
+`-t` 指定**数据的显示格式**，主要的参数有：
+
+* c ASCII字符或反斜杠序列
+* d 有符号十进制数
+* f 浮点数
+* o 八进制（系统默认值为02）
+* u 无符号十进制数
+* x 十六进制数
+
+除了选项c以外的其他选项后面都可以跟一个十进制数n，指定每个显示值所包含的字节数。
+
+说明：od命令系统默认的显示方式是八进制，这也是该命令的名称由来（Octal Dump）。但这不是最有用的显示方式，用ASCII码和十六进制组合的方式能提供更有价值的信息输出。
+
+以十六进制和字符同时显示:
+
+```
+$od -Ax -tcx4 a.c
+000000   #   i   n   c   l   u   d   e       <   s   t   d   i   o   .
+              636e6923        6564756c        74733c20        2e6f6964
+000010   h   >  \n  \n   v   o   i   d       m   a   i   n   (   )  \n
+              0a0a3e68        64696f76        69616d20        0a29286e
+000020   {  \n  \t   i   n   t       i       =       5   ;  \n  \t   p
+              69090a7b        6920746e        35203d20        70090a3b
+000030   r   i   n   t   f   (   "   h   e   l   l   o   ,   %   d   "
+              746e6972        68222866        6f6c6c65        2264252c
+000040   ,   i   )   ;  \n   }  \n
+              3b29692c        000a7d0a
+000047
+```
+
+以字符方式显示:
+
+```
+$od -c a.c
+0000000   #   i   n   c   l   u   d   e       <   s   t   d   i   o   .
+0000020   h   >  \n  \n   v   o   i   d       m   a   i   n   (   )  \n
+0000040   {  \n  \t   i   n   t       i       =       5   ;  \n  \t   p
+0000060   r   i   n   t   f   (   "   h   e   l   l   o   ,   %   d   "
+0000100   ,   i   )   ;  \n   }  \n
+0000107
+```
+
+注：类似命令还有hexdump（十六进制输出）
