--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -33,6 +33,9 @@
   - [6.3. 汇编语言](#63-汇编语言)
   - [6.4. 汇编成机器语言](#64-汇编成机器语言)
   - [6.5. 链接成最终机器语言](#65-链接成最终机器语言)
+- [例子2](#例子2)
+  - [C代码](#c代码)
+  - [预处理和汇编](#预处理和汇编)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -685,6 +688,28 @@ a3 1c 80 40 00         ； 原始汇编表达形式： mov [c]，eax
 ```
 
 指令同样采用`little-endian`存储序列，从低到高依次存放`a3 1c 80 40 00`字节，其中`1c 80 40 00`是地址值`0x0040801c`的`little-endian`字节序排列。
+
+# 例子2
+
+## C代码
+add.c
+
+```cpp
+int c;
+
+void fun(int a, int b)
+{
+	c = a + b;
+}
+
+void main(void) {}
+```
+
+## 预处理和汇编
+
+```
+
+```
 
 # 7. 参考
 
