--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -702,13 +702,74 @@ void fun(int a, int b)
 	c = a + b;
 }
 
-void main(void) {}
+void main(void)
+{
+	fun(1, 2);
+}
 ```
 
 ## 预处理和汇编
 
 ```
+gcc -S add.c -o add.s
+```
 
+```asm
+	.file	"add.c"
+	.comm	c,4,4
+	.text
+	.globl	fun
+	.type	fun, @function
+fun:
+.LFB0:
+	.cfi_startproc
+	pushq	%rbp
+	.cfi_def_cfa_offset 16
+	.cfi_offset 6, -16
+	movq	%rsp, %rbp
+	.cfi_def_cfa_register 6
+	movl	%edi, -4(%rbp)
+	movl	%esi, -8(%rbp)
+	movl	-8(%rbp), %eax
+	movl	-4(%rbp), %edx
+	addl	%edx, %eax
+	movl	%eax, c(%rip)
+	popq	%rbp
+	.cfi_def_cfa 7, 8
+	ret
+	.cfi_endproc
+.LFE0:
+	.size	fun, .-fun
+	.globl	main
+	.type	main, @function
+main:
+.LFB1:
+	.cfi_startproc
+	pushq	%rbp
+	.cfi_def_cfa_offset 16
+	.cfi_offset 6, -16
+	movq	%rsp, %rbp
+	.cfi_def_cfa_register 6
+	movl	$2, %esi
+	movl	$1, %edi
+	call	fun
+	popq	%rbp
+	.cfi_def_cfa 7, 8
+	ret
+	.cfi_endproc
+.LFE1:
+	.size	main, .-main
+	.ident	"GCC: (GNU) 4.8.5 20150623 (Red Hat 4.8.5-39)"
+	.section	.note.GNU-stack,"",@progbits
+```
+
+可以看到核心代码
+
+```
+	movl	-8(%rbp), %eax      ;对应
+	movl	-4(%rbp), %edx
+	addl	%edx, %eax
+	movl	%eax, c(%rip)
 ```
 
 # 7. 参考
