--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -35,7 +35,8 @@
   - [6.5. 链接成最终机器语言](#65-链接成最终机器语言)
 - [例子2](#例子2)
   - [C代码](#c代码)
-  - [预处理和汇编](#预处理和汇编)
+  - [预处理和编译](#预处理和编译)
+  - [汇编](#汇编)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -708,7 +709,7 @@ void main(void)
 }
 ```
 
-## 预处理和汇编
+## 预处理和编译
 
 ```
 gcc -S add.c -o add.s
@@ -766,11 +767,66 @@ main:
 可以看到核心代码
 
 ```
-	movl	-8(%rbp), %eax      ;对应
-	movl	-4(%rbp), %edx
-	addl	%edx, %eax
-	movl	%eax, c(%rip)
+	movl	%edi, -4(%rbp)    ; 参数赋值
+	movl	%esi, -8(%rbp)    ; 参数赋值
+	movl	-8(%rbp), %eax    ; 得到参数
+	movl	-4(%rbp), %edx    ; 得到参数
+	addl	%edx, %eax        ; a + b
+	movl	%eax, c(%rip)     ; 将结果赋值给c, 表明是内存单元(rip + c)
 ```
+
+## 汇编
+
+汇编并反汇编
+
+```
+gcc -c add.s -o add.o
+objdump -S add.o
+```
+
+查看反汇编结果
+
+```
+add.o:     file format elf64-x86-64
+
+
+Disassembly of section .text:
+
+0000000000000000 <fun>:
+   0:	55                   	push   %rbp
+   1:	48 89 e5             	mov    %rsp,%rbp
+   4:	89 7d fc             	mov    %edi,-0x4(%rbp)
+   7:	89 75 f8             	mov    %esi,-0x8(%rbp)
+   a:	8b 45 f8             	mov    -0x8(%rbp),%eax
+   d:	8b 55 fc             	mov    -0x4(%rbp),%edx
+  10:	01 d0                	add    %edx,%eax
+  12:	89 05 00 00 00 00    	mov    %eax,0x0(%rip)        # 18 <fun+0x18>
+  18:	5d                   	pop    %rbp
+  19:	c3                   	retq
+
+000000000000001a <main>:
+  1a:	55                   	push   %rbp
+  1b:	48 89 e5             	mov    %rsp,%rbp
+  1e:	be 02 00 00 00       	mov    $0x2,%esi
+  23:	bf 01 00 00 00       	mov    $0x1,%edi
+  28:	e8 00 00 00 00       	callq  2d <main+0x13>
+  2d:	5d                   	pop    %rbp
+  2e:	c3                   	retq
+```
+
+核心部分
+
+```
+   4:	89 7d fc             	mov    %edi,-0x4(%rbp)
+   7:	89 75 f8             	mov    %esi,-0x8(%rbp)
+   a:	8b 45 f8             	mov    -0x8(%rbp),%eax
+   d:	8b 55 fc             	mov    -0x4(%rbp),%edx
+  10:	01 d0                	add    %edx,%eax
+  12:	89 05 00 00 00 00    	mov    %eax,0x0(%rip)        # 18 <fun+0x18>
+```
+
+注: 这里将相加结果赋值给内存操作数`rip + 0`
+
 
 # 7. 参考
 
