--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -37,6 +37,7 @@
   - [C代码](#c代码)
   - [预处理和编译](#预处理和编译)
   - [汇编](#汇编)
+  - [链接](#链接)
 - [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
@@ -826,6 +827,215 @@ Disassembly of section .text:
 ```
 
 注: 这里将相加结果赋值给内存操作数`rip + 0`
+
+## 链接
+
+```
+gcc add.o  -o add
+objdump -S add
+```
+
+查看反汇编结果
+
+```
+add:     file format elf64-x86-64
+
+
+Disassembly of section .init:
+
+00000000004003a8 <_init>:
+  4003a8:	48 83 ec 08          	sub    $0x8,%rsp
+  4003ac:	48 8b 05 45 0c 20 00 	mov    0x200c45(%rip),%rax        # 600ff8 <__gmon_start__>
+  4003b3:	48 85 c0             	test   %rax,%rax
+  4003b6:	74 05                	je     4003bd <_init+0x15>
+  4003b8:	e8 33 00 00 00       	callq  4003f0 <__gmon_start__@plt>
+  4003bd:	48 83 c4 08          	add    $0x8,%rsp
+  4003c1:	c3                   	retq
+
+Disassembly of section .plt:
+
+00000000004003d0 <.plt>:
+  4003d0:	ff 35 32 0c 20 00    	pushq  0x200c32(%rip)        # 601008 <_GLOBAL_OFFSET_TABLE_+0x8>
+  4003d6:	ff 25 34 0c 20 00    	jmpq   *0x200c34(%rip)        # 601010 <_GLOBAL_OFFSET_TABLE_+0x10>
+  4003dc:	0f 1f 40 00          	nopl   0x0(%rax)
+
+00000000004003e0 <__libc_start_main@plt>:
+  4003e0:	ff 25 32 0c 20 00    	jmpq   *0x200c32(%rip)        # 601018 <__libc_start_main@GLIBC_2.2.5>
+  4003e6:	68 00 00 00 00       	pushq  $0x0
+  4003eb:	e9 e0 ff ff ff       	jmpq   4003d0 <.plt>
+
+00000000004003f0 <__gmon_start__@plt>:
+  4003f0:	ff 25 2a 0c 20 00    	jmpq   *0x200c2a(%rip)        # 601020 <__gmon_start__>
+  4003f6:	68 01 00 00 00       	pushq  $0x1
+  4003fb:	e9 d0 ff ff ff       	jmpq   4003d0 <.plt>
+
+Disassembly of section .text:
+
+0000000000400400 <_start>:
+  400400:	31 ed                	xor    %ebp,%ebp
+  400402:	49 89 d1             	mov    %rdx,%r9
+  400405:	5e                   	pop    %rsi
+  400406:	48 89 e2             	mov    %rsp,%rdx
+  400409:	48 83 e4 f0          	and    $0xfffffffffffffff0,%rsp
+  40040d:	50                   	push   %rax
+  40040e:	54                   	push   %rsp
+  40040f:	49 c7 c0 90 05 40 00 	mov    $0x400590,%r8
+  400416:	48 c7 c1 20 05 40 00 	mov    $0x400520,%rcx
+  40041d:	48 c7 c7 07 05 40 00 	mov    $0x400507,%rdi
+  400424:	e8 b7 ff ff ff       	callq  4003e0 <__libc_start_main@plt>
+  400429:	f4                   	hlt
+  40042a:	66 0f 1f 44 00 00    	nopw   0x0(%rax,%rax,1)
+
+0000000000400430 <deregister_tm_clones>:
+  400430:	b8 37 10 60 00       	mov    $0x601037,%eax
+  400435:	55                   	push   %rbp
+  400436:	48 2d 30 10 60 00    	sub    $0x601030,%rax
+  40043c:	48 83 f8 0e          	cmp    $0xe,%rax
+  400440:	48 89 e5             	mov    %rsp,%rbp
+  400443:	77 02                	ja     400447 <deregister_tm_clones+0x17>
+  400445:	5d                   	pop    %rbp
+  400446:	c3                   	retq
+  400447:	b8 00 00 00 00       	mov    $0x0,%eax
+  40044c:	48 85 c0             	test   %rax,%rax
+  40044f:	74 f4                	je     400445 <deregister_tm_clones+0x15>
+  400451:	5d                   	pop    %rbp
+  400452:	bf 30 10 60 00       	mov    $0x601030,%edi
+  400457:	ff e0                	jmpq   *%rax
+  400459:	0f 1f 80 00 00 00 00 	nopl   0x0(%rax)
+
+0000000000400460 <register_tm_clones>:
+  400460:	b8 30 10 60 00       	mov    $0x601030,%eax
+  400465:	55                   	push   %rbp
+  400466:	48 2d 30 10 60 00    	sub    $0x601030,%rax
+  40046c:	48 c1 f8 03          	sar    $0x3,%rax
+  400470:	48 89 e5             	mov    %rsp,%rbp
+  400473:	48 89 c2             	mov    %rax,%rdx
+  400476:	48 c1 ea 3f          	shr    $0x3f,%rdx
+  40047a:	48 01 d0             	add    %rdx,%rax
+  40047d:	48 d1 f8             	sar    %rax
+  400480:	75 02                	jne    400484 <register_tm_clones+0x24>
+  400482:	5d                   	pop    %rbp
+  400483:	c3                   	retq
+  400484:	ba 00 00 00 00       	mov    $0x0,%edx
+  400489:	48 85 d2             	test   %rdx,%rdx
+  40048c:	74 f4                	je     400482 <register_tm_clones+0x22>
+  40048e:	5d                   	pop    %rbp
+  40048f:	48 89 c6             	mov    %rax,%rsi
+  400492:	bf 30 10 60 00       	mov    $0x601030,%edi
+  400497:	ff e2                	jmpq   *%rdx
+  400499:	0f 1f 80 00 00 00 00 	nopl   0x0(%rax)
+
+00000000004004a0 <__do_global_dtors_aux>:
+  4004a0:	80 3d 85 0b 20 00 00 	cmpb   $0x0,0x200b85(%rip)        # 60102c <_edata>
+  4004a7:	75 11                	jne    4004ba <__do_global_dtors_aux+0x1a>
+  4004a9:	55                   	push   %rbp
+  4004aa:	48 89 e5             	mov    %rsp,%rbp
+  4004ad:	e8 7e ff ff ff       	callq  400430 <deregister_tm_clones>
+  4004b2:	5d                   	pop    %rbp
+  4004b3:	c6 05 72 0b 20 00 01 	movb   $0x1,0x200b72(%rip)        # 60102c <_edata>
+  4004ba:	f3 c3                	repz retq
+  4004bc:	0f 1f 40 00          	nopl   0x0(%rax)
+
+00000000004004c0 <frame_dummy>:
+  4004c0:	48 83 3d 58 09 20 00 	cmpq   $0x0,0x200958(%rip)        # 600e20 <__JCR_END__>
+  4004c7:	00
+  4004c8:	74 1e                	je     4004e8 <frame_dummy+0x28>
+  4004ca:	b8 00 00 00 00       	mov    $0x0,%eax
+  4004cf:	48 85 c0             	test   %rax,%rax
+  4004d2:	74 14                	je     4004e8 <frame_dummy+0x28>
+  4004d4:	55                   	push   %rbp
+  4004d5:	bf 20 0e 60 00       	mov    $0x600e20,%edi
+  4004da:	48 89 e5             	mov    %rsp,%rbp
+  4004dd:	ff d0                	callq  *%rax
+  4004df:	5d                   	pop    %rbp
+  4004e0:	e9 7b ff ff ff       	jmpq   400460 <register_tm_clones>
+  4004e5:	0f 1f 00             	nopl   (%rax)
+  4004e8:	e9 73 ff ff ff       	jmpq   400460 <register_tm_clones>
+
+00000000004004ed <fun>:
+  4004ed:	55                   	push   %rbp
+  4004ee:	48 89 e5             	mov    %rsp,%rbp
+  4004f1:	89 7d fc             	mov    %edi,-0x4(%rbp)
+  4004f4:	89 75 f8             	mov    %esi,-0x8(%rbp)
+  4004f7:	8b 45 f8             	mov    -0x8(%rbp),%eax
+  4004fa:	8b 55 fc             	mov    -0x4(%rbp),%edx
+  4004fd:	01 d0                	add    %edx,%eax
+  4004ff:	89 05 2b 0b 20 00    	mov    %eax,0x200b2b(%rip)        # 601030 <__TMC_END__>
+  400505:	5d                   	pop    %rbp
+  400506:	c3                   	retq
+
+0000000000400507 <main>:
+  400507:	55                   	push   %rbp
+  400508:	48 89 e5             	mov    %rsp,%rbp
+  40050b:	be 02 00 00 00       	mov    $0x2,%esi
+  400510:	bf 01 00 00 00       	mov    $0x1,%edi
+  400515:	e8 d3 ff ff ff       	callq  4004ed <fun>
+  40051a:	5d                   	pop    %rbp
+  40051b:	c3                   	retq
+  40051c:	0f 1f 40 00          	nopl   0x0(%rax)
+
+0000000000400520 <__libc_csu_init>:
+  400520:	41 57                	push   %r15
+  400522:	41 89 ff             	mov    %edi,%r15d
+  400525:	41 56                	push   %r14
+  400527:	49 89 f6             	mov    %rsi,%r14
+  40052a:	41 55                	push   %r13
+  40052c:	49 89 d5             	mov    %rdx,%r13
+  40052f:	41 54                	push   %r12
+  400531:	4c 8d 25 d8 08 20 00 	lea    0x2008d8(%rip),%r12        # 600e10 <__frame_dummy_init_array_entry>
+  400538:	55                   	push   %rbp
+  400539:	48 8d 2d d8 08 20 00 	lea    0x2008d8(%rip),%rbp        # 600e18 <__init_array_end>
+  400540:	53                   	push   %rbx
+  400541:	4c 29 e5             	sub    %r12,%rbp
+  400544:	31 db                	xor    %ebx,%ebx
+  400546:	48 c1 fd 03          	sar    $0x3,%rbp
+  40054a:	48 83 ec 08          	sub    $0x8,%rsp
+  40054e:	e8 55 fe ff ff       	callq  4003a8 <_init>
+  400553:	48 85 ed             	test   %rbp,%rbp
+  400556:	74 1e                	je     400576 <__libc_csu_init+0x56>
+  400558:	0f 1f 84 00 00 00 00 	nopl   0x0(%rax,%rax,1)
+  40055f:	00
+  400560:	4c 89 ea             	mov    %r13,%rdx
+  400563:	4c 89 f6             	mov    %r14,%rsi
+  400566:	44 89 ff             	mov    %r15d,%edi
+  400569:	41 ff 14 dc          	callq  *(%r12,%rbx,8)
+  40056d:	48 83 c3 01          	add    $0x1,%rbx
+  400571:	48 39 eb             	cmp    %rbp,%rbx
+  400574:	75 ea                	jne    400560 <__libc_csu_init+0x40>
+  400576:	48 83 c4 08          	add    $0x8,%rsp
+  40057a:	5b                   	pop    %rbx
+  40057b:	5d                   	pop    %rbp
+  40057c:	41 5c                	pop    %r12
+  40057e:	41 5d                	pop    %r13
+  400580:	41 5e                	pop    %r14
+  400582:	41 5f                	pop    %r15
+  400584:	c3                   	retq
+  400585:	90                   	nop
+  400586:	66 2e 0f 1f 84 00 00 	nopw   %cs:0x0(%rax,%rax,1)
+  40058d:	00 00 00
+
+0000000000400590 <__libc_csu_fini>:
+  400590:	f3 c3                	repz retq
+
+Disassembly of section .fini:
+
+0000000000400594 <_fini>:
+  400594:	48 83 ec 08          	sub    $0x8,%rsp
+  400598:	48 83 c4 08          	add    $0x8,%rsp
+  40059c:	c3                   	retq
+```
+
+核心代码
+
+```
+  4004f1:	89 7d fc             	mov    %edi,-0x4(%rbp)
+  4004f4:	89 75 f8             	mov    %esi,-0x8(%rbp)
+  4004f7:	8b 45 f8             	mov    -0x8(%rbp),%eax
+  4004fa:	8b 55 fc             	mov    -0x4(%rbp),%edx
+  4004fd:	01 d0                	add    %edx,%eax
+  4004ff:	89 05 2b 0b 20 00    	mov    %eax,0x200b2b(%rip)        # 601030 <__TMC_END__>
+```
+
 
 
 # 7. 参考
