--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -1033,10 +1033,50 @@ Disassembly of section .fini:
   4004f7:	8b 45 f8             	mov    -0x8(%rbp),%eax
   4004fa:	8b 55 fc             	mov    -0x4(%rbp),%edx
   4004fd:	01 d0                	add    %edx,%eax
-  4004ff:	89 05 2b 0b 20 00    	mov    %eax,0x200b2b(%rip)        # 601030 <__TMC_END__>
+  4004ff:	89 05 2b 0b 20 00    	mov    %eax,400505(%rip)        # 601030 <__TMC_END__>
+  400505:	5d                   	pop    %rbp
 ```
 
+这里`rip`是`400505`(即`下一条指令地址`), 加上`400505`是`601030`, 通过查看符号信息
 
+```
+# nm add
+000000000060102c B __bss_start
+0000000000601030 B c
+000000000060102c b completed.6355
+0000000000601028 D __data_start
+0000000000601028 W data_start
+0000000000400430 t deregister_tm_clones
+00000000004004a0 t __do_global_dtors_aux
+0000000000600e18 t __do_global_dtors_aux_fini_array_entry
+00000000004005a8 R __dso_handle
+0000000000600e28 d _DYNAMIC
+000000000060102c D _edata
+0000000000601038 B _end
+0000000000400594 T _fini
+00000000004004c0 t frame_dummy
+0000000000600e10 t __frame_dummy_init_array_entry
+0000000000400700 r __FRAME_END__
+00000000004004ed T fun
+0000000000601000 d _GLOBAL_OFFSET_TABLE_
+                 w __gmon_start__
+00000000004005b0 r __GNU_EH_FRAME_HDR
+00000000004003a8 T _init
+0000000000600e18 t __init_array_end
+0000000000600e10 t __init_array_start
+00000000004005a0 R _IO_stdin_used
+0000000000600e20 d __JCR_END__
+0000000000600e20 d __JCR_LIST__
+0000000000400590 T __libc_csu_fini
+0000000000400520 T __libc_csu_init
+                 U __libc_start_main@@GLIBC_2.2.5
+0000000000400507 T main
+0000000000400460 t register_tm_clones
+0000000000400400 T _start
+0000000000601030 D __TMC_END__
+```
+
+或者通过`readelf`
 
 # 7. 参考
 
