--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -33,12 +33,12 @@
   - [6.3. 汇编语言](#63-汇编语言)
   - [6.4. 汇编成机器语言](#64-汇编成机器语言)
   - [6.5. 链接成最终机器语言](#65-链接成最终机器语言)
-- [例子2](#例子2)
-  - [C代码](#c代码)
-  - [预处理和编译](#预处理和编译)
-  - [汇编](#汇编)
-  - [链接](#链接)
-- [7. 参考](#7-参考)
+- [7. 例子2](#7-例子2)
+  - [7.1. C代码](#71-c代码)
+  - [7.2. 预处理和编译](#72-预处理和编译)
+  - [7.3. 汇编](#73-汇编)
+  - [7.4. 链接](#74-链接)
+- [8. 参考](#8-参考)
 
 <!-- /code_chunk_output -->
 
@@ -691,9 +691,9 @@ a3 1c 80 40 00         ； 原始汇编表达形式： mov [c]，eax
 
 指令同样采用`little-endian`存储序列，从低到高依次存放`a3 1c 80 40 00`字节，其中`1c 80 40 00`是地址值`0x0040801c`的`little-endian`字节序排列。
 
-# 例子2
+# 7. 例子2
 
-## C代码
+## 7.1. C代码
 add.c
 
 ```cpp
@@ -710,7 +710,7 @@ void main(void)
 }
 ```
 
-## 预处理和编译
+## 7.2. 预处理和编译
 
 ```
 gcc -S add.c -o add.s
@@ -776,7 +776,7 @@ main:
 	movl	%eax, c(%rip)     ; 将结果赋值给c, 表明是内存单元(rip + c)
 ```
 
-## 汇编
+## 7.3. 汇编
 
 汇编并反汇编
 
@@ -828,7 +828,7 @@ Disassembly of section .text:
 
 注: 这里将相加结果赋值给内存操作数`rip + 0`
 
-## 链接
+## 7.4. 链接
 
 ```
 gcc add.o  -o add
@@ -1076,8 +1076,8 @@ Disassembly of section .fini:
 0000000000601030 D __TMC_END__
 ```
 
-或者通过`readelf`
+或者通过`readelf`, 当然通过`objdump -D add`也能看到
 
-# 7. 参考
+# 8. 参考
 
 http://www.0xffffff.org/2013/04/05/16-complier-and-linker-1/
