--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
+++ b/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
@@ -1,44 +1,19 @@
-Linux下用火焰图进行性能分析
-=======
 
-| CSDN | GitHub |
-|:----:|:------:|
-| [ALinux下用火焰图进行性能分析](http://blog.csdn.net/gatieme/article/details/78885908) | [`AderXCoding/system/tools`](https://github.com/gatieme/AderXCoding/tree/master/system/tools) |
-
-<br>
-
-<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>
-
-本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a>进行许可, 转载请注明出处, 谢谢合作
-
-因本人技术水平和知识面有限, 内容如有纰漏或者需要修正的地方, 欢迎大家指正, 也欢迎大家提供一些其他好的调试工具以供收录, 鄙人在此谢谢啦
-
-<br>
+# 火焰图简介
 
 软件的性能分析, 往往需要查看 `CPU` 耗时, 了解瓶颈在哪里.
 
 火焰图(`flame graph`) 是性能分析的利器
 
-#1	火焰图简介
--------
-
-
-
-
 很多人感冒发烧的时候, 往往会模仿神农氏尝百草的路子: 先尝尝抗病毒的药, 再试试抗细菌的药, 甭管家里有什么药挨个试, 什么中药西药, 瞎猫总会碰上死耗子, 如此做法自然是不可取的, 正确的做法应该是去医院验个血, 确诊后再对症下药.
-
 
 让我们回想一下我们一般是如何调试程序的 : 通常是在没有数据的情况下依靠主观臆断来瞎蒙, 而不是考虑问题到底是什么引起的!
 
 毫无疑问, 调优程序性能问题的时候, 同样需要对症下药. 好消息是 [`Brendan D. Gregg`]((http://www.brendangregg.com/perf.html#FlameGraphs) 发明了[火焰图](http://www.brendangregg.com/flamegraphs.html)
 
-
-##1.1	火焰图
--------
+## 火焰图
 
 常见的火焰图类型有 [`On-CPU`](http://www.brendangregg.com/FlameGraphs/cpuflamegraphs.html), [`Off-CPU`](http://www.brendangregg.com/FlameGraphs/offcpuflamegraphs.html), 还有 [`Memory`](http://www.brendangregg.com/FlameGraphs/memoryflamegraphs.html), [`Hot/Cold`](http://www.brendangregg.com/FlameGraphs/hotcoldflamegraphs.html), [`Differential`](http://www.brendangregg.com/blog/2014-11-09/differential-flame-graphs.html) 等等.
-
-
 
 关于火焰图详细的介绍可以参考 [`Blazing Performance with Flame Graphs`](http://www.slideshare.net/brendangregg/blazing-performance-with-flame-graphs), 简而言之 : 整个图形看起来就像一团跳动的火焰, 这也正是其名字的由来. 燃烧在火苗尖部的就是 `CPU` 正在执行的操作, 不过需要说明的是颜色是随机的, 本身并没有特殊的含义, 纵向表示调用栈的深度, 横向表示消耗的时间. 因为调用栈在横向会按照字母排序, 并且同样的调用栈会做合并, 所以一个格子的宽度越大越说明其可能是瓶颈. 综上所述, 主要就是看那些比较宽大的火苗, 特别留意那些类似平顶山的火苗.
 
@@ -51,8 +26,7 @@ Linux下用火焰图进行性能分析
 | [`sample-bt`](https://github.com/openresty/nginx-systemtap-toolkit#sample-bt) | 用来生成 On-CPU 火焰图的采样数据([`DEMO`](http://openresty.org/download/user-flamegraph.svg)) |
 | [`sample-bt-off-cpu`](https://github.com/openresty/nginx-systemtap-toolkit#sample-bt-off-cpu) | 用来生成 Off-CPU 火焰图的采样数据 ([`DEMO`](http://agentzh.org/misc/flamegraph/off-cpu-lua-resty-mysql.svg)) |
 
-##1.2	On/Off-CPU 火焰图
--------
+## On/Off-CPU 火焰图
 
 那么什么时候使用 `On-CPU` 火焰图? 什么时候使用 `Off-CPU` 火焰图呢?
 
@@ -62,16 +36,13 @@ Linux下用火焰图进行性能分析
 
 在采样数据的时候, 最好通过压测工具对程序持续施压, 以便采集到足够的样本. 关于压测工具的选择, 如果选择 `ab` 的话, 那么务必记得开启 `-k` 选项, 以避免耗尽系统的可用端口. 此外, 我建议尝试使用诸如 [`wrk`](https://github.com/wg/wrk) 之类更现代的压测工具.
 
-##1.3	火焰图可视化生成器
--------
-
+## 火焰图可视化生成器
 
 `Brendan D. Gregg` 的 `Flame Graph` 工程实现了一套生成火焰图的脚本.
 
 `Flame Graph` 项目位于 `GitHub`上
 
 >https://github.com/brendangregg/FlameGraph
-
 
 用 `git` 将其 `clone`下来
 
@@ -81,7 +52,6 @@ git clone https://github.com/brendangregg/FlameGraph.git
 
 生成和创建火焰图需要如下几个步骤
 
-
 | 流程 | 描述 | 脚本 |
 |:---:|:---:|:----:|
 | 捕获堆栈 | 使用 `perf/systemtap/dtrace` 等工具抓取程序的运行堆栈 | `perf/systemtap/dtrace` |
@@ -89,7 +59,6 @@ git clone https://github.com/brendangregg/FlameGraph.git
 | 生成火焰图 | 分析 stackcollapse 输出的堆栈信息生成火焰图 | `flamegraph.pl` |
 
 不同的 trace 工具抓取到的信息不同, 因此 `Flame Graph` 提供了一系列的 `stackcollapse` 工具.
-
 
 | `stackcollapse` | 描述 |
 |:---------------:|:----:|
@@ -105,22 +74,17 @@ git clone https://github.com/brendangregg/FlameGraph.git
 | stackcollapse-go.pl | for Golang pprof stacks |
 | stackcollapse-vsprof.pl | for Microsoft Visual Studio profiles |
 
+# 用 perf 生成火焰图
 
-
-#2	用 perf 生成火焰图
--------
-
-##2.1	perf 采集数据
--------
+## perf 采集数据
 
 让我们从 `perf` 命令(`performance` 的缩写)讲起, 它是 `Linux` 系统原生提供的性能分析工具, 会返回 `CPU` 正在执行的函数名以及调用栈(`stack`)
-
 
 ```cpp
 sudo perf record -F 99 -p 3887 -g -- sleep 30
 ```
 
-![perf 采集 chrome 运行的信息](./perf_record_chrome.png)
+![perf 采集 chrome 运行的信息](./images/perf_record_chrome.png)
 
 `perf record` 表示采集系统事件, 没有使用 `-e` 指定采集事件, 则默认采集 `cycles`(即 `CPU clock` 周期), `-F 99` 表示每秒 `99` 次, `-p 13204` 是进程号, 即对哪个进程进行分析, `-g` 表示记录调用栈, `sleep 30` 则是持续 `30` 秒.
 
@@ -134,7 +98,7 @@ sudo perf record -F 99 -p 3887 -g -- sleep 30
 sudo perf report -n --stdio
 ```
 
-![perf report 信息](./perf_report_chrome.png)
+![perf report 信息](./images/perf_report_chrome.png)
 
 
 
@@ -389,14 +353,11 @@ func_a;func_b;func_c 31 33
 
 这些脚本开始是被使用在[CPI火焰图](http://www.brendangregg.com/blog/2014-10-31/cpi-flame-graphs.html) 的分析上. 与比较修改前后的 `profile` 文件不同, 在分析 `CPI` 火焰图时, 可以分析 `CPU` 工作周期与停顿周期的差异变化, 这样可以凸显出CPU的工作状态来.
 
-##4.6	其他的差分火焰图
--------
-
+## 其他的差分火焰图
 
 ![其他差分图](224925hez6jlbeybyc29c5.jpg)
 
 也有其他人做过类似的工作. [Robert Mustacchi](http://dtrace.org/blogs/rm) 在不久前也做了一些尝试，他使用的方法类似于代码检视时的标色风格：只显示了差异的部分，红色表示新增（上升）的代码路径，蓝色表示删除（下降）的代码路径。一个关键的差别是栈帧的宽度只体现了差异的样本数。右边是一个例子。这个是个很好的主意，但在实际使用中会感觉有点奇怪，因为缺失了完整profile文件的上下文作为背景，这张图显得有些难以理解。
-
 
 ![火焰图](224928b0bz08k800jtt8at.png)
 
@@ -406,8 +367,8 @@ Cor-Paul Bezemer也制作了一种差分显示方法[flamegraphdiff](http://corp
 
 火焰图正在广泛传播中，现在很多公司都在使用它。如果大家知道有其他的实现差分火焰图的方式，我也不会感到惊讶。（请在评论中告诉我）
 
-##4.7	总结
--------
+## 总结
+
 如果你遇到了性能回退问题，红/蓝差分火焰图是找到根因的最快方式。这种方式抓取了两张普通的火焰图，然后进行对比，并对差异部分进行标色：红色表示上升，蓝色表示下降。 差分火焰图是以当前（“修改后”）的profile文件作为基准，形状和大小都保持不变。因此你通过色彩的差异就能够很直观的找到差异部分，且可以看出为什么会有这样的差异。
 
 差分火焰图可以应用到项目的每日构建中，这样性能回退的问题就可以及时地被发现和修正。
@@ -415,19 +376,14 @@ Cor-Paul Bezemer也制作了一种差分显示方法[flamegraphdiff](http://corp
 via: http://www.brendangregg.com/blog/2014-11-09/differential-flame-graphs.html
 
 
-#5	参考
--------
+# 参考
+
+| CSDN | GitHub |
+|:----:|:------:|
+| [ALinux下用火焰图进行性能分析](http://blog.csdn.net/gatieme/article/details/78885908) | [`AderXCoding/system/tools`](https://github.com/gatieme/AderXCoding/tree/master/system/tools) |
 
 [使用linux perf工具生成java程序火焰图](https://www.cnblogs.com/CarpenterLee/p/7467283.html)
 
 [使用perf生成Flame Graph(火焰图)](http://blog.csdn.net/justlinux2010/article/details/11520829?utm_source=tuicool&utm_medium=referral)
 
 [大神brendangregg的站点](http://www.brendangregg.com/perf.html#FlameGraphs)
-
-<br>
-
-*	本作品/博文 ( [AderStep-紫夜阑珊-青伶巷草 Copyright ©2013-2017](http://blog.csdn.net/gatieme) ), 由 [成坚(gatieme)](http://blog.csdn.net/gatieme) 创作.
-
-*	采用<a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="知识共享许可协议" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a>进行许可. 欢迎转载、使用、重新发布, 但务必保留文章署名[成坚gatieme](http://blog.csdn.net/gatieme) ( 包含链接: http://blog.csdn.net/gatieme ), 不得用于商业目的. 
-
-*	基于本文修改后的作品务必以相同的许可发布. 如有任何疑问，请与我联系.
