--- a/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
+++ b/Linux/Debug/debug/tools/perf/flame_graph/使用火焰图进行性能分析.md
@@ -1,5 +1,33 @@
 
-# 火焰图简介
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1. 火焰图简介](#1-火焰图简介)
+  - [1.1. 火焰图](#11-火焰图)
+  - [1.2. On/Off-CPU 火焰图](#12-onoff-cpu-火焰图)
+  - [1.3. 火焰图可视化生成器](#13-火焰图可视化生成器)
+- [2. 用 perf 生成火焰图](#2-用-perf-生成火焰图)
+  - [2.1. perf 采集数据](#21-perf-采集数据)
+  - [2.2. 生成火焰图](#22-生成火焰图)
+- [3. 解析火焰图](#3-解析火焰图)
+  - [3.1. 火焰图的含义](#31-火焰图的含义)
+  - [3.2. 互动性](#32-互动性)
+  - [3.3. 局限](#33-局限)
+  - [3.4. 浏览器的火焰图](#34-浏览器的火焰图)
+- [4. 红蓝分叉火焰图](#4-红蓝分叉火焰图)
+  - [4.1. 红蓝差分火焰图示例](#41-红蓝差分火焰图示例)
+  - [4.2. 红蓝差分火焰图简介](#42-红蓝差分火焰图简介)
+  - [4.3. 生成红/蓝差分火焰图](#43-生成红蓝差分火焰图)
+  - [4.4. 不足之处](#44-不足之处)
+  - [4.5. CPI 火焰图](#45-cpi-火焰图)
+  - [4.6. 其他的差分火焰图](#46-其他的差分火焰图)
+  - [4.7. 总结](#47-总结)
+- [5. 参考](#5-参考)
+
+<!-- /code_chunk_output -->
+
+# 1. 火焰图简介
 
 软件的性能分析, 往往需要查看 `CPU` 耗时, 了解瓶颈在哪里.
 
@@ -11,7 +39,7 @@
 
 毫无疑问, 调优程序性能问题的时候, 同样需要对症下药. 好消息是 [`Brendan D. Gregg`]((http://www.brendangregg.com/perf.html#FlameGraphs) 发明了[火焰图](http://www.brendangregg.com/flamegraphs.html)
 
-## 火焰图
+## 1.1. 火焰图
 
 常见的火焰图类型有 [`On-CPU`](http://www.brendangregg.com/FlameGraphs/cpuflamegraphs.html), [`Off-CPU`](http://www.brendangregg.com/FlameGraphs/offcpuflamegraphs.html), 还有 [`Memory`](http://www.brendangregg.com/FlameGraphs/memoryflamegraphs.html), [`Hot/Cold`](http://www.brendangregg.com/FlameGraphs/hotcoldflamegraphs.html), [`Differential`](http://www.brendangregg.com/blog/2014-11-09/differential-flame-graphs.html) 等等.
 
@@ -26,7 +54,7 @@
 | [`sample-bt`](https://github.com/openresty/nginx-systemtap-toolkit#sample-bt) | 用来生成 On-CPU 火焰图的采样数据([`DEMO`](http://openresty.org/download/user-flamegraph.svg)) |
 | [`sample-bt-off-cpu`](https://github.com/openresty/nginx-systemtap-toolkit#sample-bt-off-cpu) | 用来生成 Off-CPU 火焰图的采样数据 ([`DEMO`](http://agentzh.org/misc/flamegraph/off-cpu-lua-resty-mysql.svg)) |
 
-## On/Off-CPU 火焰图
+## 1.2. On/Off-CPU 火焰图
 
 那么什么时候使用 `On-CPU` 火焰图? 什么时候使用 `Off-CPU` 火焰图呢?
 
@@ -36,7 +64,7 @@
 
 在采样数据的时候, 最好通过压测工具对程序持续施压, 以便采集到足够的样本. 关于压测工具的选择, 如果选择 `ab` 的话, 那么务必记得开启 `-k` 选项, 以避免耗尽系统的可用端口. 此外, 我建议尝试使用诸如 [`wrk`](https://github.com/wg/wrk) 之类更现代的压测工具.
 
-## 火焰图可视化生成器
+## 1.3. 火焰图可视化生成器
 
 `Brendan D. Gregg` 的 `Flame Graph` 工程实现了一套生成火焰图的脚本.
 
@@ -74,9 +102,9 @@ git clone https://github.com/brendangregg/FlameGraph.git
 | stackcollapse-go.pl | for Golang pprof stacks |
 | stackcollapse-vsprof.pl | for Microsoft Visual Studio profiles |
 
-# 用 perf 生成火焰图
+# 2. 用 perf 生成火焰图
 
-## perf 采集数据
+## 2.1. perf 采集数据
 
 让我们从 `perf` 命令(`performance` 的缩写)讲起, 它是 `Linux` 系统原生提供的性能分析工具, 会返回 `CPU` 正在执行的函数名以及调用栈(`stack`)
 
@@ -100,15 +128,9 @@ sudo perf report -n --stdio
 
 ![perf report 信息](./images/perf_report_chrome.png)
 
-
-
-
-##2.2	生成火焰图
--------
-
+## 2.2. 生成火焰图
 
 首先用 `perf script` 工具对 `perf.data` 进行解析
-
 
 ```cpp
 # 生成折叠后的调用栈
@@ -119,8 +141,6 @@ perf script -i perf.data &> perf.unfold
 
 首先用 `stackcollapse-perf.pl` 将 perf 解析出的内容 `perf.unfold` 中的符号进行折叠 :
 
-
-
 ```cpp
 # 生成火焰图
 ./stackcollapse-perf.pl perf.unfold &> perf.folded
@@ -128,28 +148,23 @@ perf script -i perf.data &> perf.unfold
 
 最后生成 `svg` 图
 
-
 ```cpp
 ./flamegraph.pl perf.folded > perf.svg
 ```
 
 我们可以使用管道将上面的流程简化为一条命令
 
-
 ```cpp
 perf script | FlameGraph/stackcollapse-perf.pl | FlameGraph/flamegraph.pl > process.svg
 ```
 
-![生成火焰图](perf_flame_graph.png)
+![生成火焰图](./images/perf_flame_graph.png)
 
-#3	解析火焰图
--------
+# 3. 解析火焰图
 
 最后就可以用浏览器打开火焰图进行分析啦.
 
-
-##3.1	火焰图的含义
--------
+## 3.1. 火焰图的含义
 
 火焰图是基于 `stack` 信息生成的 `SVG` 图片, 用来展示 `CPU` 的调用栈。
 
@@ -161,48 +176,39 @@ perf script | FlameGraph/stackcollapse-perf.pl | FlameGraph/flamegraph.pl > proc
 
 颜色没有特殊含义, 因为火焰图表示的是 `CPU` 的繁忙程度, 所以一般选择暖色调.
 
-##3.2	互动性
--------
+## 3.2. 互动性
 
 火焰图是 `SVG` 图片, 可以与用户互动.
 
-*	鼠标悬浮
+* 鼠标悬浮
 
 火焰的每一层都会标注函数名, 鼠标悬浮时会显示完整的函数名、抽样抽中的次数、占据总抽样次数的百分比。下面是一个例子.
 
-
 mysqld'JOIN::exec (272,959 samples, 78.34 percent)
 
-*	点击放大
+* 点击放大
 
 在某一层点击，火焰图会水平放大，该层会占据所有宽度，显示详细信息。
 
-
-
 左上角会同时显示 "Reset Zoom", 点击该链接, 图片就会恢复原样.
 
-*	搜索
+* 搜索
 
 按下 Ctrl + F 会显示一个搜索框，用户可以输入关键词或正则表达式，所有符合条件的函数名会高亮显示.
 
-
-##3.3	局限
--------
+## 3.3. 局限
 
 两种情况下, 无法画出火焰图, 需要修正系统行为.
 
-*	调用栈不完整
+* 调用栈不完整
 
 当调用栈过深时，某些系统只返回前面的一部分（比如前10层）。
 
-*	函数名缺失
+* 函数名缺失
 
 有些函数没有名字，编译器只用内存地址来表示（比如匿名函数）。
 
-
-
-##3.4	浏览器的火焰图
--------
+## 3.4. 浏览器的火焰图
 
 `Chrome` 浏览器可以生成页面脚本的火焰图, 用来进行 `CPU` 分析.
 
@@ -210,37 +216,27 @@ mysqld'JOIN::exec (272,959 samples, 78.34 percent)
 
 这时, 开发者工具会显示一个时间轴. 它的下方就是火焰图.
 
-
-
 浏览器的火焰图与标准火焰图有两点差异 : 它是倒置的(即调用栈最顶端的函数在最下方); `x` 轴是时间轴, 而不是抽样次数.
 
-
-#4	红蓝分叉火焰图
--------
+# 4. 红蓝分叉火焰图
 
 参考 http://www.brendangregg.com/blog/2014-11-09/differential-flame-graphs.html
 
 幸亏有了 `CPU` 火焰图(`flame graphs`), `CPU` 使用率的问题一般都比较好定位. 但要处理性能回退问题, 就要在修改前后或者不同时期和场景下的火焰图之间, 不断切换对比, 来找出问题所在, 这感觉就是像在太阳系中搜寻冥王星. 虽然, 这种方法可以解决问题, 但我觉得应该会有更好的办法.
 
-
-
 所以, 下面就隆重介绍 **红/蓝差分火焰图(red/blue differential flame graphs)**
 
-##4.1	红蓝差分火焰图示例
--------
+## 4.1. 红蓝差分火焰图示例
 
-![红/蓝差分火焰图](zfs-flamegraph-diff.svg)
+![红/蓝差分火焰图](./images/zfs-flamegraph-diff.svg)
 
 上面是[一副交互式 `SVG` 格式图片](http://www.brendangregg.com/blog/images/2014/zfs-flamegraph-diff.svg). 图中使用了两种颜色来表示状态, 红色表示增长, 蓝色表示衰减.
 
 这张火焰图中各火焰的形状和大小都是和第二次抓取的 `profile` 文件对应的 `CPU` 火焰图是相同的. (其中, `y` 轴表示栈的深度, `x` 轴表示样本的总数, 栈帧的宽度表示了 `profile` 文件中该函数出现的比例, 最顶层表示正在运行的函数, 再往下就是调用它的栈).
 
-
 在下面这个案例展示了, 在系统升级后, 一个工作载荷的 `CPU` 使用率上升了. 下面是对应的 `CPU` 火焰图(`SVG` 格式)
 
-![对应的 `CPU` 火焰图](zfs-flamegraph-after.svg)
-
-
+![对应的 `CPU` 火焰图](./images/zfs-flamegraph-after.svg)
 
 通常, 在标准的火焰图中栈帧和栈塔的颜色是随机选择的. 而在红/蓝差分火焰图中, 使用不同的颜色来表示两个 `profile` 文件中的差异部分.
 
@@ -248,9 +244,7 @@ mysqld'JOIN::exec (272,959 samples, 78.34 percent)
 
 这个例子过于简单, 我甚至可以不用差分火焰图也能分析出来. 但想象一下, 如果是在分析一个微小的性能下降, 比如说小于5%, 而且代码也更加复杂的时候, 问题就为那么好处理了.
 
-##4.2	红蓝差分火焰图简介
--------
-
+## 4.2. 红蓝差分火焰图简介
 
 这个事情我已经讨论了好几年了, 最终我自己编写了一个我个人认为有价值的实现。它的工作原理是这样的 :
 
@@ -266,8 +260,7 @@ mysqld'JOIN::exec (272,959 samples, 78.34 percent)
 
 只有对性能产生直接影响的函数才会标注颜色（比如说，正在运行的函数），它所调用的子函数不会重复标注。
 
-##4.3	生成红/蓝差分火焰图
--------
+## 4.3. 生成红/蓝差分火焰图
 
 作者的 `GitHub` 仓库 `FlameGrdph` 中实现了一个程序脚本，`difffolded.pl` 用来生成红蓝差分火焰图. 为了展示工具是如何工作的, 用 	Linux perf_events	 来演示一下操作步骤. 你也可以使用其他 `profiler/tracer`.
 
@@ -299,7 +292,6 @@ perf script > out.stacks2
 ./difffolded.pl out.folded1 out.folded2 | ./flamegraph.pl > diff2.svg
 ```
 
-
 `difffolded.pl` 只能对 "折叠" 过的堆栈 `profile` 文件进行操作, [折叠操作](https://github.com/brendangregg/FlameGraph) 是由前面的 `stackcollapse` 系列脚本完成的. 脚本共输出 `3` 列数据, 其中一列代表折叠的调用栈, 另两列为修改前后 `profile` 文件的统计数据.
 
 ```cpp
@@ -317,19 +309,15 @@ func_a;func_b;func_c 31 33
 | difffolded.pl -x | 这个选项会把16进制的地址删掉。 profiler时常会无法将地址转换为符号，这样的话栈里就会有16进制地址。如果这个地址在两个profile文件中不同，这两个栈就会认为是不同的栈，而实际上它们是相同的。遇到这样的问题就用-x选项搞定 |
 | flamegraph.pl --negate | 用于颠倒红/蓝配色。 在下面的章节中，会用到这个功能 |
 
-##4.4	不足之处
--------
+## 4.4. 不足之处
 
 虽然红/蓝差分火焰图很有用, 但实际上还是有一个问题 : 如果一个代码执行路径完全消失了, 那么在火焰图中就找不到地方来标注蓝色. 你只能看到当前的 `CPU` 使用情况, 而不知道为什么会变成这样.
 
 一个办法是, 将对比顺序颠倒, 画一个相反的差分火焰图. 例如 :
 
-
-![红蓝差分火焰图的不足之处](zfs-flamegraph-negated.svg)
+![红蓝差分火焰图的不足之处](./images/zfs-flamegraph-negated.svg)
 
 上面的火焰图是以修改前的 `profile` 文件为基准, 颜色表达了将要发生的情况. 右边使用蓝色高亮显示的部分, 从中可以看出修改后 `CPU Idle` 消耗的 `CPU` 时间会变少. (其实, 通常会把 `cpuidle` 给过滤掉, 使用命令行 `grep -v cpuidle`)
-
-
 
 图中把消失的代码也突显了出来(或者应该是说, 没有突显), 因为修改前并没有使能压缩功能, 所以它没有出现在修改前的 `profile` 文件了, 也就没有了被表为红色的部分.
 
@@ -348,18 +336,17 @@ func_a;func_b;func_c 31 33
 
 如果是在做功能验证测试，我会同时生成这两张图。
 
-##4.5	CPI 火焰图
--------
+## 4.5. CPI 火焰图
 
 这些脚本开始是被使用在[CPI火焰图](http://www.brendangregg.com/blog/2014-10-31/cpi-flame-graphs.html) 的分析上. 与比较修改前后的 `profile` 文件不同, 在分析 `CPI` 火焰图时, 可以分析 `CPU` 工作周期与停顿周期的差异变化, 这样可以凸显出CPU的工作状态来.
 
-## 其他的差分火焰图
+## 4.6. 其他的差分火焰图
 
-![其他差分图](224925hez6jlbeybyc29c5.jpg)
+![其他差分图](./images/224925hez6jlbeybyc29c5.jpg)
 
 也有其他人做过类似的工作. [Robert Mustacchi](http://dtrace.org/blogs/rm) 在不久前也做了一些尝试，他使用的方法类似于代码检视时的标色风格：只显示了差异的部分，红色表示新增（上升）的代码路径，蓝色表示删除（下降）的代码路径。一个关键的差别是栈帧的宽度只体现了差异的样本数。右边是一个例子。这个是个很好的主意，但在实际使用中会感觉有点奇怪，因为缺失了完整profile文件的上下文作为背景，这张图显得有些难以理解。
 
-![火焰图](224928b0bz08k800jtt8at.png)
+![火焰图](./images/224928b0bz08k800jtt8at.png)
 
 Cor-Paul Bezemer也制作了一种差分显示方法[flamegraphdiff](http://corpaul.github.io/flamegraphdiff/), 他同时将3张火焰图放在同一张图中，修改前后的标准火焰图各一张，下面再补充了一张差分火焰图，但栈帧宽度也是差异的样本数。 上图是一个[例子](http://corpaul.github.io/flamegraphdiff/demos/dispersy/dispersy_diff.html). 在差分图中将鼠标移到栈帧上，3张图中同一栈帧都会被高亮显示。这种方法中补充了两张标准的火焰图，因此解决了上下文的问题。
 
@@ -367,7 +354,7 @@ Cor-Paul Bezemer也制作了一种差分显示方法[flamegraphdiff](http://corp
 
 火焰图正在广泛传播中，现在很多公司都在使用它。如果大家知道有其他的实现差分火焰图的方式，我也不会感到惊讶。（请在评论中告诉我）
 
-## 总结
+## 4.7. 总结
 
 如果你遇到了性能回退问题，红/蓝差分火焰图是找到根因的最快方式。这种方式抓取了两张普通的火焰图，然后进行对比，并对差异部分进行标色：红色表示上升，蓝色表示下降。 差分火焰图是以当前（“修改后”）的profile文件作为基准，形状和大小都保持不变。因此你通过色彩的差异就能够很直观的找到差异部分，且可以看出为什么会有这样的差异。
 
@@ -376,7 +363,7 @@ Cor-Paul Bezemer也制作了一种差分显示方法[flamegraphdiff](http://corp
 via: http://www.brendangregg.com/blog/2014-11-09/differential-flame-graphs.html
 
 
-# 参考
+# 5. 参考
 
 | CSDN | GitHub |
 |:----:|:------:|
