--- Auto-Git Commit ---

--- a/Linux/Learning/奔跑吧Linux内核/6. 内核调试/2. ftrace.md
+++ b/Linux/Learning/奔跑吧Linux内核/6. 内核调试/2. ftrace.md
@@ -1,105 +1,1 @@
-
-<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
-
-<!-- code_chunk_output -->
-
-- [ftrace简介](#ftrace简介)
-  - [内核编译选项](#内核编译选项)
-  - [配置选项](#配置选项)
-- [irqs跟踪器](#irqs跟踪器)
-
-<!-- /code_chunk_output -->
-
-# ftrace简介
-
-ftrace最早出现在**Linux 2.6.27**版本中，其设计目标简单，基于**静态代码插装技术**， **不需要**用户通过**额外的编程**来定义trace行为。
-
-**静态代码插装技术**比较可靠，不会因为**用户的不当使用**而导致**内核崩溃**。
-
-ftrace的名字由**function trace**而来，利用**gcc编译器**的**profile特性**在**所有函数入口处！！！** 添加了一段**插桩(stub) 代码**，**ftrace重载这段代码**来实现**trace功能**。**gcc编译器**的“\-**pg**”选项会在**每个函数入口处**加入**mcount的调用代码**，原本mcount有**libc实现**，因为内核不会链接libc库，因此ftrace编写了自己的**mcountstub** 函数。
-
-## 内核编译选项
-
-在使用ftrace之前，需要确保内核配置编译了其配置选项。
-
-```
-CONFIG_FTRACE=y
-CONFIG_HAVE_FUNCTION_TRACER=y
-CONFIG_HAVE_FUNCTION_GRAPH_TRACER=y
-CONFIG_HAVE_DYNAMIC_FTRACE=y
-CONFIG_FUNCTION_TRACER=y
-CONFIG_IRQSOFF_TRACER=y
-CONFIG_SCHED_TRACER=y
-CONFIG_ENABLE_DEFAULT_TRACERS=y
-CONFIG_FTRACE_SYSCALLS=y
-CONFIG_PREEMPT_TRACER=y
-```
-
-## 配置选项
-
-ftrace相关配置选项比较多，针对**不同的跟踪器**有各自**对应的配置选项**。
-
-ftrace通过 **debugfs文件系统**向**用户空间**提供**访问接口**，因此需要在**系统启动时挂载debugfs**, 可以修改系统的/**etc/fstab文件**或**手工挂载**.
-
-```
-# mount -t debugfs debugfs /sys/kernel/debug
-# mount | grep debugfs
-debugfs on /sys/kernel/debug type debugfs (rw,relatime)
-```
-
-在/**sys/kernel/debug/tracing**目录下提供了各种**跟踪器(tracer**) 和 **event事件**，一些常用的选项如下。
-
-- available\_tracers: 列出**当前系统支持的跟踪器**。
-- available\_events: 列出**当前系统支持的event事件**。
-- current\_tracer: 设置和显示当前**正在使用的跟踪器**。使用**echo命令**可以把**跟踪器的名字**写入该文件，即可以切换不同的跟踪器。**默认为nop**, 即不做任何跟踪操作。
-- trace: **读取跟踪信息**。通过cat命令查看ftrace记录下来的跟踪信息。
-- tracing\_on: 用于**开始或暂停跟踪**。
-- trace\_options: 设置ftrace的一些**相关选项**。
-
-ftrace当前包含**多个跟踪器**，很方便用户用来跟踪**不同类型的信息**, 例如**进程睡眠唤醒**、**抢占延迟**的信息。查看**available\_tracers**可以知道当前系统**支持哪些跟踪器**，如果系统支持的跟踪器上**没有用户想要的**，那就必须在**配置内核时自行打幵**，然后**重新编译内核**。常用的 ftrace**跟踪器**如下。
-
-- nop: 不跟踪任何信息。将nop写入current\_tracer文件可以**清空之前收集到的跟踪信息**。
-- function: 跟踪内核**函数执行情况**。
-- function\_graph:可以显示类似C语言的**函数调用关系图**，比较直观。 
-- wakeup: 跟踪进**程唤醒信息**。
-- irqsoff: 跟踪**关闭中断信息**，并记录**关闭的最大时长**。
-- preemptoff: 跟踪**关闭禁止抢占信息**，并记录**关闭的最大时长**。
-- preemptirqsoff: 综合了irqoff和preemptoff两个功能。
-- sched\_switch: 对内核中的**进程调度活动**进行跟踪。
-
-# irqs跟踪器
-
-当**中断被关闭(俗称关中断**)了，CPU就**不能响应其他的事件**，如果这时有一个**鼠标中断**，要在**下一次开中断时**才能**响应**这个鼠标中断，这段延迟称为**中断延迟**。
-
-向current\_tracer文件写入**irqsoff**字符串即可打幵**irqsoff**来**跟踪中断延迟**。
-
-```
-# cd /sys/kernel/debug/tracing/
-# echo 0 > options/function-trace // 关闭function-trace可以减少一些延迟 
-# echo irqsoff > current_tracer
-# echo 1 > tracing_on
-[•••] //停顿一会
-# echo 0 > tracing_on 
-# cat trace
-```
-下面是irqsoff跟踪的-个结果。
-
-
-
-文件的开头显示了**当前跟踪器**为**irqsoff**, 并且显示**当前跟踪器的版本信息**为vl.1.5, 运行的**内核版本**为4.0。显示**当前最大的中断延迟**是259微秒，**跟踪条目**和**总共跟踪条目**为 4条(\#4/4), 另外VP、KP、SP、HP值暂时没用，\#P:4表示**当前系统可用的CPU—共有 4个**。task:ps\-6143表示**当前发生中断延迟的进程**是PID为**6143**的进程，名称为ps。
-
-**started at**和**ended at**显示发生**中断的开始函数**和**结束函数**分别为\_\_**lock\_task\_sighand**和\_**raw\_spin\_unlock\_irqrestore**。接下来ftrace信息表示的内容分别如下。
-
-- cmd:进程名字为“ps”。
-- pid:进程的PID号。
-- CPU#:该进程运行在哪个CPU上。
-- irqs-off: “d ”表示中断己经关闭。
-- need_resched: “N ”表示进程设置了 TIF一NEED-RESCHED 和 PREEMPT\_NEED\_RESCHED标志位;“n”表示进程仅设置了 TIF_NEED_RESCHED标志位;“p”表示进程仅设置了 PREEMPT_NEED_RESCHED标志位。
-□ hardirq/soffirq: “H ”表示在一次软中断中发生了一个硬件中断;“h ”表示硬件中
-断发生;“s”表示软中断表示没有中断发生。
-□ preempt-depth:表示抢占关闭的嵌套层级。
-□ time:表示时间戳。如果打开了latency-format选项，表示时间从开始跟踪算起，
-这是一个相对时间，方便开发者观察，否则使用系统绝对时间。
-□ delay:用一些特殊符号来延迟的时间，方便开发者观察。“$”表示大于1秒，“#”
-表示大于1000微秒，“!”表示大于100微秒，“+”表示大于10微秒。 最后要说明的是，文件最开始显不中断延迟是259微秒，但是S<stack trace>里显不306
-微秒，这是因为在记录最大延迟信息时需要花费一些时间。
+见 `Linux/Debug/debug/tools/trace/Ftrace`
