--- a/Linux/Learning/奔跑吧Linux内核/6. 内核调试/6. 内核调试秘籍.md
+++ b/Linux/Learning/奔跑吧Linux内核/6. 内核调试/6. 内核调试秘籍.md
@@ -63,23 +63,47 @@ arch/arm/boot/dts/vexpress-v2p-ca9.dtb -nographic
 # 动态打印
 
 动态打印（Dynamic Printk Debugging）是内核子系统开发者最喜欢的打印手段之一。在系统运行时，动态打印可以由系统维护者动态打开哪些内核子系统的打印，可以有选择性地打开某些模块的打印，而printk是全局的，只能设置打印等级。要使用动态打印，必须在内核配置时打开CONFIG_DYNAMIC_DEBUG宏。内核代码里使用了大量pr_debug()/dev_dbg()函数来打印信息，这些就使用了动态打印技术，另外还需要系统挂载debugfs文件系统。
+
 动态打印在debugfs文件系统中有一个control文件节点，文件节点记录了系统中所有使用动态打印技术的文件名路径、打印所在的行号、模块名字和要打印的语句。
+
+```
 ￼       # cat /sys/kernel/debug/dynamic_debug/control￼ ￼       […]￼       mm/cma.c:372 [cma]cma_alloc =_ "%s(cma %p, count %d, align %d)\012"￼       mm/cma.c:413 [cma]cma_alloc =_ "%s(): memory range at %p is busy, retrying\012"￼       mm/cma.c:418 [cma]cma_alloc =_ "%s(): returned %p\012"￼       mm/cma.c:439 [cma]cma_release =_ "%s(page %p)\012"￼       […]
+```
+
 例如上面的cma模块，代码路径是mm/cma.c文件，打印语句所在行号是372，所在函数是cma_alloc()，要打印的语句是“%s(cma %p, count %d, align %d)\012”。在使用动态打印技术之前，可以先通过查询control文件获知系统有哪些动态打印语句，例如”cat control| grep xxx”。
+
 下面举例来说明如何使用动态打印技术。
+
 ￼       // 打开svcsock.c文件中所有动态打印语句￼       # echo 'file svcsock.c +p' > /sys/kernel/dynamic_debug/control￼ ￼       // 打开usbcore模块所有动态打印语句￼       # echo  'module usbcore +p' >  /sys/kernel/dynamic_debug/control￼ ￼       // 打开svc_process()函数中所有的动态打印语句￼       # echo 'func svc_process +p' >  /sys/kernel/dynamic_debug/control￼ ￼       // 关闭svc_process()函数中所有的动态打印语句￼       # echo 'func svc_process -p' > /sys/kernel/dynamic_debug/control￼ ￼       // 打开文件路径中包含usb的文件里所有的动态打印语句￼ ￼       # echo -n '*usb* +p' > /sys/kernel/dynamic_debug/control￼ ￼       // 打开系统所有的动态打印语句￼       # echo -n '+p' >  /sys/kernel/dynamic_debug/control
+
 上面是打开动态打印语句的例子，除了能打印pr_debug()/dev_dbg()函数中定义的输出外，还能打印一些额外信息，例如函数名、行号、模块名字和线程ID等。
+
 ❑ p：打开动态打印语句。
 ❑ f：打印函数名。
 ❑ l：打印行号。
 ❑ m：打印模块名字。
 ❑ t：打印线程ID。
 在调试一些系统启动方面的代码，例如SMP初始化、USB核心初始化等，这些代码在系统进入shell终端时已经初始化完成，因此无法及时打开动态打印语句。这时可以在内核启动时传递参数给内核，在系统初始化时动态打开它们，这是一个实际工程中非常好用的技巧。例如调试SMP初始化的代码，查询到ARM SMP模块有一些动态打印语句。
+
 ￼       / # cat /sys/kernel/debug/dynamic_debug/control | grep smp￼       arch/arm/kernel/smp.c:354 [smp]secondary_start_kernel =pflt "CPU%u: Booted￼       secondary processor\012"
+
 在内核commandline中添加“smp.dyndbg=+plft”字符串。
-￼       #qemu-system-arm -M vexpress-a9  -m 1024M -kernel arch/arm/boot/zImage￼       -append "rdinit=/linuxrc console=ttyAMA0 loglevel=8 smp.dyndbg=+plft" -dtb￼       arch/arm/boot/dts/vexpress-v2p-ca9.dtb -nographic -smp 4￼ ￼       […]￼       / # dmesg | grep "Booted"  //查询SMP模块的动态打印语句是否打开？￼       [0] secondary_start_kernel:354: CPU1: Booted secondary processor￼       [0] secondary_start_kernel:354: CPU2: Booted secondary processor￼       [0] secondary_start_kernel:354: CPU3: Booted secondary processor￼       / #
+
+```
+￼#qemu-system-arm -M vexpress-a9  -m 1024M -kernel arch/arm/boot/zImage
+-append "rdinit=/linuxrc console=ttyAMA0 loglevel=8 smp.dyndbg=+plft" -dtb￼
+arch/arm/boot/dts/vexpress-v2p-ca9.dtb -nographic -smp 4￼
+[…]￼
+/ # dmesg | grep "Booted"  //查询SMP模块的动态打印语句是否打开？￼       [0] secondary_start_kernel:354: CPU1: Booted secondary processor￼       [0] secondary_start_kernel:354: CPU2: Booted secondary processor￼       [0] secondary_start_kernel:354: CPU3: Booted secondary processor￼       / #
+```
+
 还可以在各个子系统的Makefile中添加ccflags来打开动态打印。
 
+```makefile
+# […/Makefile]￼
+ccflags-y       := -DDEBUG￼
+ccflags-y       += -DVERBOSE_DEBUG
+```
 # RAM Console
 
 # OOPS分析
