--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/0. 本章概述.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/0. 本章概述.md
@@ -1,10 +1,10 @@
 为支持虚拟化环境, 在计算机结构体系中的**CPU域**和**PCI总线域**上, Intel提供了**三个层面的虚拟化技术**(Intel Virtualization Technology).
 
-(1) 基于**处理器的虚拟化技术**(Intel **VT\-x**): 全称为Virtualization Technology for x86, 在处理器上实现虚拟化技术, 它的实现架构是Virtual\-Machine Extensions(VMX). 在VMX下引入了两种处理器模式, 即VMX root与VMX non\-root, 分别支持host和guest软件的运行, 使guest软件能直接在处理器硬件上运行.
+(1) 基于**处理器的虚拟化技术**(`Intel VT\-x`): 全称为Virtualization Technology for x86, 在处理器上实现虚拟化技术, 它的实现架构是Virtual\-Machine Extensions(VMX). 在VMX下引入了两种处理器模式, 即VMX root与VMX non\-root, 分别支持host和guest软件的运行, 使guest软件能直接在处理器硬件上运行.
 
-(2) 基于**PCI总线域设备**实现的**I/O虚拟化技术**(Intel **VT\-d**): 全称是Virtualization Technology for Directed I/O, 这个虚拟化技术实现在**芯片组(Chipset)层面**上, 提供了诸如**DMA remapping**与**Interrupt remapping**等技术来支持**外部设备I/O访问**的**直接虚拟化**.
+(2) 基于**PCI总线域设备**实现的**I/O虚拟化技术**(`Intel VT\-d`): 全称是Virtualization Technology for Directed I/O, 这个虚拟化技术实现在**芯片组(Chipset)层面**上, 提供了诸如**DMA remapping**与**Interrupt remapping**等技术来支持**外部设备I/O访问**的**直接虚拟化**.
 
-(3) 基于**网络的虚拟化技术**(intel **VT\-c**): 全称为Virtualization Technology for Connectivity, 部署在**Intel的网络设备**上, 这也是基于**PCI总线域设备**的**虚拟化技术**.
+(3) 基于**网络的虚拟化技术**(`Intel VT\-c`): 全称为Virtualization Technology for Connectivity, 部署在**Intel的网络设备**上, 这也是基于**PCI总线域设备**的**虚拟化技术**.
 
 根据Intel的介绍, 在所有Intel的10 Gigabit Server Adapter和部分Gigabit Server Adapter上, **VT\-c**提供了两个关键的技术: Virtual Machine Device Queues(**VMDq**)和Virtual Machine Direct Connect(**VMDc**). Intel server adapter上的**VMDq**可以做到为**各个guest OS**处理**分类好的packet**, 能**明显提升I/O吞吐量**. 而**VMDc**使用PCI\-SIG Single Root I/O(**SR\-IOV**)技术, 允许虚拟机**直接使用访问网络I/O硬件**改善虚拟化性能.
 
