--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/2. VMX架构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/2. VMX架构.md
@@ -50,7 +50,7 @@ Executive\-VMCS指针与SMM\-transfer VMCS指针使用在**开启SMM dual\-monit
 
 # 3. 检测VMX支持
 
-软件应通过检查CPUID.01H:ECX[5].VMX位确定是否支持VMX架构, 该位为1时表明处理器支持VMX架构.
+软件应通过检查`CPUID.01H:ECX[5].VMX`位确定**是否支持VMX架构**, 该位为1时表明处理器支持VMX架构.
 
 ........
 
