--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/2. VMX架构.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第2章 VMX架构基础/2. VMX架构.md
@@ -52,10 +52,49 @@ Executive\-VMCS指针与SMM\-transfer VMCS指针使用在**开启SMM dual\-monit
 
 软件应通过检查`CPUID.01H:ECX[5].VMX`位确定**是否支持VMX架构**, 该位为1时表明处理器支持VMX架构.
 
-........
+```asm
+;-------------------------------------------------
+; support_intel_vmx()
+; input:
+;       none
+; output:
+;       1 - support, 0 - unsupport
+; 描述：
+;       1) 检查是否支持 Intel VT-x 技术
+;------------------------------------------------
+support_intel_vmx:
+        ;;
+        ;; 检查 CPUID.01H:ECX[5].VMX 位
+        ;;
+        bt DWORD [gs: PCB.FeatureEcx], 5
+        setc al
+        movzx eax, al
+        ret
+```
+
+或者在进入VMX operation模式前进行VMX支持的检查, 第2.5节将介绍更多关于"VMX支持能力检查"的描述.
 
 # 4. 开启VMX进入允许
 
 要开启VMX operation模式, 必须**先开启CR4.VMXE控制位**, 该控制位也表明处理器允许使用**VMXON指令**, 但**其他的VMX指令**则**必须在进入VMX operation模式后(！！！**)才能使用.
 
-...............
+```asm
+        ;;
+        ;; 检测是否支持 VMX 
+        ;;
+        bt DWORD [ebp + PCB.FeatureEcx], 5
+        mov eax, STATUS_UNSUCCESS
+        jnc vmx_operation_enter.done        
+        
+        ;;
+        ;; 开启 VMX operation 允许
+        ;;
+        REX.Wrxb
+        mov eax, cr4
+        REX.Wrxb
+        bts eax, 13                                     ; CR4.VMEX = 1
+        REX.Wrxb
+        mov cr4, eax
+```
+
+上面是实现进入VMX operation模式前的一段代码, 在检查处理器支持VMX后, 
